@@ -1,28 +1,23 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.config.model.test;
 
+import com.yahoo.component.Version;
+import com.yahoo.config.application.api.ApplicationFile;
 import com.yahoo.config.application.api.ApplicationMetaData;
+import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.config.application.api.ComponentInfo;
 import com.yahoo.config.application.api.UnparsedConfigDefinition;
-import com.yahoo.config.application.api.ApplicationFile;
-import com.yahoo.component.Version;
-import com.yahoo.config.model.application.provider.BaseDeployLogger;
-import com.yahoo.config.model.application.provider.MockFileRegistry;
-import com.yahoo.config.model.deploy.TestProperties;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.ApplicationName;
 import com.yahoo.config.provision.InstanceName;
+import com.yahoo.config.provision.Tags;
 import com.yahoo.config.provision.TenantName;
 import com.yahoo.io.IOUtils;
-import com.yahoo.path.Path;
 import com.yahoo.io.reader.NamedReader;
+import com.yahoo.path.Path;
 import com.yahoo.search.query.profile.QueryProfileRegistry;
 import com.yahoo.search.query.profile.config.QueryProfileXMLReader;
-import com.yahoo.searchdefinition.RankProfileRegistry;
-import com.yahoo.searchdefinition.SearchBuilder;
-import com.yahoo.searchdefinition.parser.ParseException;
 import com.yahoo.vespa.config.ConfigDefinitionKey;
-import com.yahoo.config.application.api.ApplicationPackage;
 
 import java.io.BufferedInputStream;
 import java.io.File;
@@ -33,10 +28,13 @@ import java.io.InputStream;
 import java.io.Reader;
 import java.io.StringReader;
 import java.io.UncheckedIOException;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -49,16 +47,16 @@ import java.util.stream.Collectors;
  */
 public class MockApplicationPackage implements ApplicationPackage {
 
-    public static final String DEPLOYED_BY_USER = "user";
     public static final String APPLICATION_NAME = "application";
     public static final long APPLICATION_GENERATION = 1L;
-    public static final String MUSIC_SEARCHDEFINITION = createSearchDefinition("music", "foo");
-    public static final String BOOK_SEARCHDEFINITION = createSearchDefinition("book", "bar");
+    public static final String MUSIC_SCHEMA = createSchema("music", "foo");
+    public static final String BOOK_SCHEMA = createSchema("book", "bar");
 
     private final File root;
     private final String hostsS;
     private final String servicesS;
     private final List<String> schemas;
+    private final Map<Path, MockApplicationFile> files;
     private final String schemaDir;
     private final Optional<String> deploymentSpec;
     private final Optional<String> validationOverrides;
@@ -67,6 +65,7 @@ public class MockApplicationPackage implements ApplicationPackage {
     private final ApplicationMetaData applicationMetaData;
 
     protected MockApplicationPackage(File root, String hosts, String services, List<String> schemas,
+                                     Map<Path, MockApplicationFile> files,
                                      String schemaDir,
                                      String deploymentSpec, String validationOverrides, boolean failOnValidateXml,
                                      String queryProfile, String queryProfileType) {
@@ -74,19 +73,20 @@ public class MockApplicationPackage implements ApplicationPackage {
         this.hostsS = hosts;
         this.servicesS = services;
         this.schemas = schemas;
+        this.files = files;
         this.schemaDir = schemaDir;
         this.deploymentSpec = Optional.ofNullable(deploymentSpec);
         this.validationOverrides = Optional.ofNullable(validationOverrides);
         this.failOnValidateXml = failOnValidateXml;
         queryProfileRegistry = new QueryProfileXMLReader().read(asNamedReaderList(queryProfileType),
                                                                 asNamedReaderList(queryProfile));
-        applicationMetaData = new ApplicationMetaData(DEPLOYED_BY_USER,
-                                                      "dir",
+        applicationMetaData = new ApplicationMetaData("dir",
                                                       0L,
                                                       false,
                                                       ApplicationId.from(TenantName.defaultName(),
                                                                          ApplicationName.from(APPLICATION_NAME),
                                                                          InstanceName.defaultName()),
+                                                      Tags.empty(),
                                                       "checksum",
                                                       APPLICATION_GENERATION,
                                                       0L);
@@ -96,13 +96,7 @@ public class MockApplicationPackage implements ApplicationPackage {
     protected File root() { return root; }
 
     @Override
-    @SuppressWarnings("deprecation")
-    public String getApplicationName() {
-        return "mock application";
-    }
-
-    @Override
-    public ApplicationId getApplicationId() { return ApplicationId.from("default", getApplicationName(), "default"); }
+    public ApplicationId getApplicationId() { return ApplicationId.from("default", "mock-application", "default"); }
 
     @Override
     public Reader getServices() {
@@ -118,21 +112,24 @@ public class MockApplicationPackage implements ApplicationPackage {
     @Override
     public List<NamedReader> getSchemas() {
         ArrayList<NamedReader> readers = new ArrayList<>();
-        SearchBuilder searchBuilder = new SearchBuilder(this,
-                                                        new MockFileRegistry(),
-                                                        new BaseDeployLogger(),
-                                                        new TestProperties(),
-                                                        new RankProfileRegistry(),
-                                                        queryProfileRegistry);
-        for (String sd : schemas) {
-            try  {
-                String name = searchBuilder.importString(sd);
-                readers.add(new NamedReader(name + ApplicationPackage.SD_NAME_SUFFIX, new StringReader(sd)));
-            } catch (ParseException e) {
-                throw new RuntimeException(e);
-            }
-        }
+        for (String sd : schemas)
+            readers.add(new NamedReader(extractSdName(sd) + ApplicationPackage.SD_NAME_SUFFIX, new StringReader(sd)));
         return readers;
+    }
+
+    /** To avoid either double parsing or supplying a name explicitly */
+    private String extractSdName(String sd) {
+        String s = sd.split("\n")[0];
+        if (s.startsWith("schema"))
+            s = s.substring("schema".length()).trim();
+        else if (s.startsWith("search"))
+            s = s.substring("search".length()).trim();
+        else
+            throw new IllegalArgumentException("Expected the first line of a schema but got '" + sd + "'");
+        int end = s.indexOf(' ');
+        if (end < 0)
+            end = s.indexOf('}');
+        return s.substring(0, end).trim();
     }
 
     @Override
@@ -142,12 +139,33 @@ public class MockApplicationPackage implements ApplicationPackage {
 
     @Override
     public List<NamedReader> getFiles(Path dir, String fileSuffix, boolean recurse) {
-        return new ArrayList<>();
+        if (dir.elements().contains(ApplicationPackage.SEARCH_DEFINITIONS_DIR.getName()))
+            return List.of(); // No legacy paths
+        return getFiles(new File(root, dir.getName()), fileSuffix, recurse);
+    }
+
+    private List<NamedReader> getFiles(File dir, String fileSuffix, boolean recurse) {
+        try {
+            if ( ! dir.exists()) return List.of();
+            List<NamedReader> readers = new ArrayList<>();
+            for (var i = Files.list(dir.toPath()).iterator(); i.hasNext(); ) {
+                var file = i.next();
+                if (file.getFileName().toString().endsWith(fileSuffix))
+                    readers.add(new NamedReader(file.toString(), IOUtils.createReader(file.toString())));
+                else if (recurse)
+                    readers.addAll(getFiles(new File(dir, file.getFileName().toString()), fileSuffix, recurse));
+            }
+            return readers;
+        }
+        catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public ApplicationFile getFile(Path file) {
-        return new MockApplicationFile(file, Path.fromString(root.toString()));
+        if (files.containsKey(file)) return files.get(file);
+        return new MockApplicationFile(file, root);
     }
 
     @Override
@@ -206,12 +224,22 @@ public class MockApplicationPackage implements ApplicationPackage {
                        .withSchemaDir(dir).build();
     }
 
+    // TODO: It might work to just merge this and the above
+    public static ApplicationPackage fromSearchDefinitionAndRootDirectory(String dir) {
+        return new MockApplicationPackage.Builder()
+                .withRoot(new File(dir))
+                .withEmptyHosts()
+                .withEmptyServices()
+                .withSchemaDir(dir).build();
+    }
+
     public static class Builder {
 
         private File root = new File("nonexisting");
         private String hosts = null;
         private String services = null;
         private List<String> schemas = Collections.emptyList();
+        private Map<Path, MockApplicationFile> files = new LinkedHashMap<>();
         private String schemaDir = null;
         private String deploymentSpec = null;
         private String validationOverrides = null;
@@ -255,6 +283,16 @@ public class MockApplicationPackage implements ApplicationPackage {
             return this;
         }
 
+        /** Additional (mock) files that will exist in this application package, with their content. */
+        public Builder withFiles(Map<Path, String> files) {
+            Map<Path, MockApplicationFile> mockFiles = new HashMap<>();
+            for (var file : files.entrySet())
+                mockFiles.put(file.getKey(), new MockApplicationFile(file.getKey(),
+                                                                     root, file.getValue()));
+            this.files = mockFiles;
+            return this;
+        }
+
         public Builder withSchemaDir(String schemaDir) {
             this.schemaDir = schemaDir;
             return this;
@@ -286,13 +324,13 @@ public class MockApplicationPackage implements ApplicationPackage {
         }
 
         public ApplicationPackage build() {
-                return new MockApplicationPackage(root, hosts, services, schemas, schemaDir,
-                                                  deploymentSpec, validationOverrides, failOnValidateXml,
-                                                  queryProfile, queryProfileType);
+            return new MockApplicationPackage(root, hosts, services, schemas, files, schemaDir,
+                                              deploymentSpec, validationOverrides, failOnValidateXml,
+                                              queryProfile, queryProfileType);
         }
     }
 
-    public static String createSearchDefinition(String name, String fieldName) {
+    public static String createSchema(String name, String fieldName) {
         return "search " + name + " {" +
                 "  document " + name + " {" +
                 "    field " + fieldName + " type string {}" +
@@ -336,31 +374,42 @@ public class MockApplicationPackage implements ApplicationPackage {
 
     public static class MockApplicationFile extends ApplicationFile {
 
-        /** The path to the application package root */
-        private final Path root;
+        /** The application package root */
+        private final File root;
 
         /** The File pointing to the actual file represented by this */
         private final File file;
 
-        public MockApplicationFile(Path filePath, Path applicationPackagePath) {
-            super(filePath);
-            this.root = applicationPackagePath;
-            file = applicationPackagePath.append(filePath).toFile();
+        /** The content of this file, or null to read it from the file system. */
+        private final String content;
+
+        public MockApplicationFile(Path relativeFile, File root) {
+            this(relativeFile, root, null);
+        }
+
+        private MockApplicationFile(Path relativeFile, File root, String content) {
+            super(relativeFile);
+            this.root = root;
+            this.file = root.toPath().resolve(relativeFile.toString()).toFile();
+            this.content = content;
         }
 
         @Override
         public boolean isDirectory() {
+            if (content != null) return false;
             return file.isDirectory();
         }
 
         @Override
         public boolean exists() {
+            if (content != null) return true;
             return file.exists();
         }
 
         @Override
         public Reader createReader() {
             try {
+                if (content != null) return new StringReader(content);
                 if ( ! exists()) throw new FileNotFoundException("File '" + file + "' does not exist");
                 return IOUtils.createReader(file, "UTF-8");
             }
@@ -372,6 +421,7 @@ public class MockApplicationPackage implements ApplicationPackage {
         @Override
         public InputStream createInputStream() {
             try {
+                if (content != null) throw new UnsupportedOperationException("Not implemented for mock file content");
                 if ( ! exists()) throw new FileNotFoundException("File '" + file + "' does not exist");
                 return new BufferedInputStream(new FileInputStream(file));
             }
@@ -389,6 +439,7 @@ public class MockApplicationPackage implements ApplicationPackage {
         @Override
         public ApplicationFile writeFile(Reader input) {
             try {
+                if (content != null) throw new UnsupportedOperationException("Not implemented for mock file content");
                 IOUtils.writeFile(file, IOUtils.readAll(input), false);
                 return this;
             }
@@ -400,6 +451,7 @@ public class MockApplicationPackage implements ApplicationPackage {
         @Override
         public ApplicationFile appendFile(String value) {
             try {
+                if (content != null) throw new UnsupportedOperationException("Not implemented for mock file content");
                 IOUtils.writeFile(file, value, true);
                 return this;
             }
@@ -410,7 +462,7 @@ public class MockApplicationPackage implements ApplicationPackage {
 
         @Override
         public List<ApplicationFile> listFiles(PathFilter filter) {
-            if ( ! isDirectory()) return Collections.emptyList();
+            if ( ! isDirectory()) return List.of();
             return Arrays.stream(file.listFiles()).filter(f -> filter.accept(Path.fromString(f.toString())))
                          .map(f -> new MockApplicationFile(asApplicationRelativePath(f), root))
                          .collect(Collectors.toList());
@@ -418,6 +470,7 @@ public class MockApplicationPackage implements ApplicationPackage {
 
         @Override
         public ApplicationFile delete() {
+            if (content != null) throw new UnsupportedOperationException("Not implemented for mock file content");
             file.delete();
             return this;
         }
@@ -438,7 +491,7 @@ public class MockApplicationPackage implements ApplicationPackage {
 
             Iterator<String> pathIterator = path.iterator();
             // Skip the path elements this shares with the root
-            for (Iterator<String> rootIterator = root.iterator(); rootIterator.hasNext(); ) {
+            for (Iterator<String> rootIterator = Path.fromString(root.toString()).iterator(); rootIterator.hasNext(); ) {
                 String rootElement = rootIterator.next();
                 String pathElement = pathIterator.next();
                 if ( ! rootElement.equals(pathElement)) throw new RuntimeException("Assumption broken");
