@@ -1,13 +1,14 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.model.admin;
 
+import com.yahoo.config.model.deploy.DeployState;
 import com.yahoo.config.model.producer.AbstractConfigProducer;
 import com.yahoo.vespa.model.AbstractService;
 import com.yahoo.vespa.model.PortAllocBridge;
+import java.util.Optional;
 
 /**
- * Represents the Logserver. There is exactly one logserver in a Vespa
- * system.
+ * Represents the Logserver. There is exactly one logserver in a Vespa system.
  *
  * @author gjoranv
  * @author bjorncs
@@ -16,6 +17,7 @@ public class Logserver extends AbstractService {
 
     private static final long serialVersionUID = 1L;
     private static final String logArchiveDir = "$ROOT/logs/vespa/logarchive";
+    private String compressionType = "gzip";
 
     public Logserver(AbstractConfigProducer parent) {
         super(parent, "logserver");
@@ -27,27 +29,34 @@ public class Logserver extends AbstractService {
         setProp("clustername", "admin");
     }
 
+    @Override
+    public void initService(DeployState deployState) {
+        super.initService(deployState);
+        this.compressionType = deployState.featureFlags().logFileCompressionAlgorithm("gzip");
+    }
+
     /**
      * @return the startup command for the logserver
      */
-    public String getStartupCommand() {
-        return "exec $ROOT/bin/vespa-logserver-start " + getMyJVMArgs() + " " + getJvmOptions();
+    @Override
+    public Optional<String> getStartupCommand() {
+        return Optional.of("exec $ROOT/bin/vespa-logserver-start " + getMyJVMArgs() + " " + getJvmOptions());
     }
 
-    /**
-     * @return the jvm args to be used by the logserver.
-     */
+    /** Returns the jvm args to be used by the logserver. */
     private String getMyJVMArgs() {
         StringBuilder sb = new StringBuilder();
+        sb.append("--add-opens=java.base/java.io=ALL-UNNAMED");
+        sb.append(" ");
         sb.append("-Dlogserver.rpcListenPort=").append(getRelativePort(0));
         sb.append(" ");
         sb.append("-Dlogserver.logarchive.dir=" + logArchiveDir);
+        sb.append(" ");
+        sb.append("-Dlogserver.logarchive.compression=" + compressionType);
         return sb.toString();
     }
 
-    /**
-     * Returns the desired base port for this service.
-     */
+    /** Returns the desired base port for this service. */
     public int getWantedPort() {
         return 19080;
     }
@@ -61,9 +70,7 @@ public class Logserver extends AbstractService {
         return true; // TODO Support dynamic port allocation for logserver
     }
 
-    /**
-     * @return the number of ports needed by the logserver.
-     */
+    /** Returns the number of ports needed by the logserver. */
     public int getPortCount() {
         return 4;
     }
