@@ -3,15 +3,12 @@ package com.yahoo.vespa.model.builder.xml.dom.chains.docproc;
 
 import com.yahoo.config.model.deploy.DeployState;
 import com.yahoo.config.model.producer.AbstractConfigProducer;
-import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.vespa.model.builder.xml.dom.chains.ComponentsBuilder.ComponentType;
 import com.yahoo.vespa.model.builder.xml.dom.chains.DomChainsBuilder;
-import com.yahoo.vespa.model.container.docproc.DocprocChains;
 import com.yahoo.vespa.model.container.docproc.DocprocChain;
+import com.yahoo.vespa.model.container.docproc.DocprocChains;
 import com.yahoo.vespa.model.container.docproc.DocumentProcessor;
 import org.w3c.dom.Element;
-
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -22,18 +19,18 @@ import java.util.Map;
  */
 public class DomDocprocChainsBuilder  extends DomChainsBuilder<DocumentProcessor, DocprocChain, DocprocChains> {
     public DomDocprocChainsBuilder(Element outerChainsElem, boolean supportDocprocChainsDir) {
-        super(outerChainsElem, Arrays.asList(ComponentType.documentprocessor),
-                supportDocprocChainsDir ? ApplicationPackage.DOCPROCCHAINS_DIR: null);
+        super(List.of(ComponentType.documentprocessor)
+        );
     }
 
     @Override
-    protected DocprocChains newChainsInstance(AbstractConfigProducer parent) {
+    protected DocprocChains newChainsInstance(AbstractConfigProducer<?> parent) {
         return new DocprocChains(parent, "docprocchains");
     }
 
     @Override
-    protected DocprocChainsBuilder readChains(DeployState deployState, AbstractConfigProducer ancestor, List<Element> docprocChainsElements,
-                                              Map<String, ComponentType> outerComponentTypeByComponentName) {
+    protected DocprocChainsBuilder readChains(DeployState deployState, AbstractConfigProducer<?> ancestor, List<Element> docprocChainsElements,
+                                              Map<String, ComponentType<?>> outerComponentTypeByComponentName) {
         return new DocprocChainsBuilder(deployState, ancestor, docprocChainsElements, outerComponentTypeByComponentName);
     }
 }
