@@ -12,24 +12,18 @@ import com.yahoo.search.searchchain.model.federation.FederationSearcherModel;
 import com.yahoo.search.searchchain.model.federation.FederationSearcherModel.TargetSpec;
 import com.yahoo.vespa.model.ConfigProducer;
 import com.yahoo.vespa.model.container.search.searchchain.Source.GroupOption;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
-import static java.util.Collections.emptyList;
-import static java.util.Collections.emptySet;
-import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
-import static org.hamcrest.Matchers.contains;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author Tony Vaagenes
@@ -38,9 +32,9 @@ import static org.junit.Assert.assertTrue;
 public class FederationSearcherTest {
 
     private static class FederationFixture {
-        FederationSearcher federationSearchWithDefaultSources = newFederationSearcher(true, emptyList());
-        private ComponentRegistry<SearchChain> searchChainRegistry = new ComponentRegistry<>();
-        private SourceGroupRegistry sourceGroupRegistry = new SourceGroupRegistry();
+        FederationSearcher federationSearchWithDefaultSources = newFederationSearcher(true, List.of());
+        private final ComponentRegistry<SearchChain> searchChainRegistry = new ComponentRegistry<>();
+        private final SourceGroupRegistry sourceGroupRegistry = new SourceGroupRegistry();
 
         void initializeFederationSearcher(FederationSearcher searcher) {
             searcher.initialize(searchChainRegistry, sourceGroupRegistry);
@@ -73,7 +67,7 @@ public class FederationSearcherTest {
     }
 
     @Test
-    public void default_providers_are_inherited_when_inheritDefaultSources_is_true() throws Exception {
+    void default_providers_are_inherited_when_inheritDefaultSources_is_true() throws Exception {
         FederationFixture f = new FederationFixture();
 
         final String providerId = "providerId";
@@ -85,29 +79,30 @@ public class FederationSearcherTest {
         FederationConfig.Target target = federationConfig.target(0);
 
         assertSame(providerId, target.id()); // by identity
-        assertTrue("Not used by default", target.searchChain(0).useByDefault());
+        assertTrue(target.searchChain(0).useByDefault(), "Not used by default");
     }
 
     @Test
-    public void source_groups_are_inherited_when_inheritDefaultSources_is_true() throws Exception {
+    void source_groups_are_inherited_when_inheritDefaultSources_is_true() throws Exception {
         FederationFixture f = new ProvidersWithSourceFixture();
 
         FederationConfig federationConfig = getConfig(f.federationSearchWithDefaultSources);
-        Assert.assertEquals(1, federationConfig.target().size());
+        assertEquals(1, federationConfig.target().size());
 
         FederationConfig.Target target = federationConfig.target(0);
         assertEquals(target.id(), "source");
-        assertTrue("Not used by default", target.useByDefault());
+        assertTrue(target.useByDefault(), "Not used by default");
         assertEquals(2, target.searchChain().size());
-        assertThat(target.searchChain().stream().map(FederationConfig.Target.SearchChain::providerId).collect(toList()),
-                contains("provider1", "provider2"));
+        assertTrue(target.searchChain().stream()
+                .map(FederationConfig.Target.SearchChain::providerId)
+                .toList().containsAll(List.of("provider1", "provider2")));
     }
 
     @Test
-    public void source_groups_are_not_inherited_when_inheritDefaultSources_is_false() throws Exception {
+    void source_groups_are_not_inherited_when_inheritDefaultSources_is_false() throws Exception {
         FederationFixture f = new ProvidersWithSourceFixture();
 
-        FederationSearcher federationSearcherWithoutDefaultSources = newFederationSearcher(false, emptyList());
+        FederationSearcher federationSearcherWithoutDefaultSources = newFederationSearcher(false, List.of());
         f.initializeFederationSearcher(federationSearcherWithoutDefaultSources);
 
         FederationConfig federationConfig = getConfig(federationSearcherWithoutDefaultSources);
@@ -115,7 +110,7 @@ public class FederationSearcherTest {
     }
 
     @Test
-    public void leaders_must_be_the_first_search_chain_in_a_target() throws Exception {
+    void leaders_must_be_the_first_search_chain_in_a_target() throws Exception {
         FederationFixture f = new ProvidersWithSourceFixture();
 
         FederationConfig federationConfig = getConfig(f.federationSearchWithDefaultSources);
@@ -126,12 +121,12 @@ public class FederationSearcherTest {
     }
 
     @Test
-    public void manually_specified_targets_overrides_inherited_targets() throws Exception {
+    void manually_specified_targets_overrides_inherited_targets() throws Exception {
         FederationFixture f = new FederationFixture();
 
         f.registerProviderWithSources(createProvider(ComponentId.fromString("provider1")));
         FederationSearcher federation = newFederationSearcher(true,
-                singletonList(new TargetSpec(ComponentSpecification.fromString("provider1"),
+                List.of(new TargetSpec(ComponentSpecification.fromString("provider1"),
                         new FederationOptions().setTimeoutInMilliseconds(12345))));
         f.initializeFederationSearcher(federation);
 
@@ -151,7 +146,7 @@ public class FederationSearcherTest {
     }
 
     private static ChainSpecification searchChainSpecification(ComponentId id) {
-        return new ChainSpecification(id, new ChainSpecification.Inheritance(null, null), emptyList(), emptySet());
+        return new ChainSpecification(id, new ChainSpecification.Inheritance(null, null), List.of(), Set.of());
     }
 
     private static Provider createProvider(ComponentId id) {
@@ -165,7 +160,7 @@ public class FederationSearcherTest {
     private static FederationConfig getConfig(ConfigProducer configProducer) throws Exception {
         Optional<Class<?>> builderClassOpt = Arrays.stream(FederationConfig.class.getDeclaredClasses())
                 .filter(c -> c.getSimpleName().equals("Builder")).findFirst();
-        if (builderClassOpt.isPresent() == false) {
+        if ( builderClassOpt.isEmpty()) {
             throw new RuntimeException("No Builder class in ConfigInstance.");
         }
         Class<?> builderClass = builderClassOpt.get();
