@@ -15,16 +15,11 @@ import com.yahoo.vespa.model.routing.Routing;
 import com.yahoo.vespa.model.search.IndexedSearchCluster;
 import com.yahoo.vespa.model.test.utils.ApplicationPackageUtils;
 import com.yahoo.vespa.model.test.utils.VespaModelCreatorWithMockPkg;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Test for using the content model to create indexed search clusters.
@@ -48,14 +43,6 @@ public class IndexedTest extends ContentBaseTest {
                 "  <admin version='2.0'>" +
                 "    <adminserver hostalias='node0'/>" +
                 "  </admin>" +
-                "  <config name='vespa.configdefinition.specialtokens'>" +
-                "    <tokenlist operation='append'>" +
-                "      <name>default</name>" +
-                "      <tokens operation='append'>" +
-                "        <token>dvd+-r</token>" +
-                "      </tokens>" +
-                "    </tokenlist>" +
-                "  </config>" +
                 "  <container version='1.0'>" +
                 "    <search/>" +
                 "    <nodes>" +
@@ -113,16 +100,16 @@ public class IndexedTest extends ContentBaseTest {
 
     private VespaModelCreatorWithMockPkg getIndexedVespaModelCreator() {
         List<String> sds = ApplicationPackageUtils.generateSchemas("type1", "type2", "type3");
-        return new VespaModelCreatorWithMockPkg(getHosts(), createProtonIndexedVespaServices(Arrays.asList("type1", "type2", "type3")), sds);
+        return new VespaModelCreatorWithMockPkg(getHosts(), createProtonIndexedVespaServices(List.of("type1", "type2", "type3")), sds);
     }
 
     private VespaModel getStreamingVespaModel() {
         List<String> sds = ApplicationPackageUtils.generateSchemas("type1");
-        return new VespaModelCreatorWithMockPkg(getHosts(), createProtonStreamingVespaServices(Arrays.asList("type1")), sds).create();
+        return new VespaModelCreatorWithMockPkg(getHosts(), createProtonStreamingVespaServices(List.of("type1")), sds).create();
     }
 
     @Test
-    public void requireMultipleDocumentTypes() {
+    void requireMultipleDocumentTypes() {
         VespaModelCreatorWithMockPkg creator = getIndexedVespaModelCreator();
         VespaModel model = creator.create();
         DeployState deployState = creator.deployState;
@@ -137,13 +124,13 @@ public class IndexedTest extends ContentBaseTest {
     }
 
     @Test
-    public void requireIndexedOnlyServices() {
+    void requireIndexedOnlyServices() {
         VespaModel model = getIndexedVespaModel();
         // TODO
         // HostResource h = model.getHostSystem().getHosts().get(0);
         // String [] expectedServices = {"logserver", "configserver", "adminserver", "slobrok",
         //                               "logd", "configproxy","config-sentinel",
-        //                               "qrserver", "fleetcontroller",
+        //                               "container", "fleetcontroller",
         //                               "storagenode", "searchnode", "distributor", "transactionlogserver"};
         // DomContentBuilderTest.assertServices(h, expectedServices);
         Routing routing = model.getRouting();
@@ -166,13 +153,13 @@ public class IndexedTest extends ContentBaseTest {
     }
 
     @Test
-    public void requireProtonStreamingOnly() {
+    void requireProtonStreamingOnly() {
         VespaModel model = getStreamingVespaModel();
         // TODO
         // HostResource h = model.getHostSystem().getHosts().get(0);
         // String [] expectedServices = {"logserver", "configserver", "adminserver", "slobrok",
         //                               "logd", "configproxy","config-sentinel",
-        //                               "qrserver", "storagenode", "searchnode", "distributor",
+        //                               "container", "storagenode", "searchnode", "distributor",
         //                               "transactionlogserver"};
         // DomContentBuilderTest.assertServices(h, expectedServices);
         ContentCluster s = model.getContentClusters().get("test");
@@ -184,50 +171,50 @@ public class IndexedTest extends ContentBaseTest {
     }
 
     @Test
-    public void requireCorrectClusterList() {
+    void requireCorrectClusterList() {
         VespaModel model = getStreamingVespaModel();
         ContentCluster s = model.getContentClusters().get("test");
         assertNotNull(s);
         assertFalse(s.getSearch().hasIndexedCluster());
         ClusterListConfig config = model.getConfig(ClusterListConfig.class, VespaModel.ROOT_CONFIGID);
-        assertThat(config.storage().size(), is(1));
-        assertThat(config.storage(0).name(), is("test"));
-        assertThat(config.storage(0).configid(), is("test"));
+        assertEquals(1, config.storage().size());
+        assertEquals("test", config.storage(0).name());
+        assertEquals("test", config.storage(0).configid());
     }
 
     @Test
-    public void testContentSummaryStore() {
-        String services=
+    void testContentSummaryStore() {
+        String services =
                 "<services version='1.0'>" +
-                "<admin version='2.0'><adminserver hostalias='node0' /></admin>" +
-                "<content id='docstore' version='1.0'>\n" +
-                "    <redundancy>1</redundancy>\n" +
-                "    <documents>\n" +
-                "      <document mode='index' type='docstorebench'/>\n" +
-                "    </documents>\n" +
-                "    <group>\n" +
-                "      <node distribution-key='0' hostalias='node0'/>\n" +
-                "    </group>\n" +
-                "    <engine>\n" +
-                "      <proton>\n" +
-                "        <searchable-copies>1</searchable-copies>\n" +
-                "        <tuning>\n" +
-                "          <searchnode>\n" +
-                "            <summary>\n" +
-                "              <store>\n" +
-                "                <logstore>\n" +
-                "                  <chunk>\n" +
-                "                    <maxsize>2048</maxsize>\n" +
-                "                  </chunk>\n" +
-                "                </logstore>\n" +
-                "              </store>\n" +
-                "            </summary>\n" +
-                "          </searchnode>\n" +
-                "        </tuning>\n" +
-                "      </proton>\n" +
-                "    </engine>\n" +
-                "  </content>\n" +
-                "  </services>";
+                        "<admin version='2.0'><adminserver hostalias='node0' /></admin>" +
+                        "<content id='docstore' version='1.0'>\n" +
+                        "    <redundancy>1</redundancy>\n" +
+                        "    <documents>\n" +
+                        "      <document mode='index' type='docstorebench'/>\n" +
+                        "    </documents>\n" +
+                        "    <group>\n" +
+                        "      <node distribution-key='0' hostalias='node0'/>\n" +
+                        "    </group>\n" +
+                        "    <engine>\n" +
+                        "      <proton>\n" +
+                        "        <searchable-copies>1</searchable-copies>\n" +
+                        "        <tuning>\n" +
+                        "          <searchnode>\n" +
+                        "            <summary>\n" +
+                        "              <store>\n" +
+                        "                <logstore>\n" +
+                        "                  <chunk>\n" +
+                        "                    <maxsize>2048</maxsize>\n" +
+                        "                  </chunk>\n" +
+                        "                </logstore>\n" +
+                        "              </store>\n" +
+                        "            </summary>\n" +
+                        "          </searchnode>\n" +
+                        "        </tuning>\n" +
+                        "      </proton>\n" +
+                        "    </engine>\n" +
+                        "  </content>\n" +
+                        "  </services>";
 
         List<String> sds = ApplicationPackageUtils.generateSchemas("docstorebench");
         VespaModel model = new VespaModelCreatorWithMockPkg(getHosts(), services, sds).create();
@@ -236,21 +223,21 @@ public class IndexedTest extends ContentBaseTest {
     }
 
     @Test
-    public void testMixedIndexAndStoreOnly() {
-        String services=
+    void testMixedIndexAndStoreOnly() {
+        String services =
                 "<services version='1.0'>" +
-                "  <admin version='2.0'><adminserver hostalias='node0' /></admin>" +
-                "  <content id='docstore' version=\"1.0\">" +
-                "    <redundancy>1</redundancy>" +
-                "    <documents>" +
-                "      <document type=\"index_me\" mode=\"index\"/>" +
-                "      <document type=\"store_me\" mode=\"store-only\"/>" +
-                "    </documents>" +
-                "    <group>" +
-                "      <node distribution-key=\"0\" hostalias=\"node0\"/>" +
-                "    </group>" +
-                "  </content>" +
-                "</services>";
+                        "  <admin version='2.0'><adminserver hostalias='node0' /></admin>" +
+                        "  <content id='docstore' version=\"1.0\">" +
+                        "    <redundancy>1</redundancy>" +
+                        "    <documents>" +
+                        "      <document type=\"index_me\" mode=\"index\"/>" +
+                        "      <document type=\"store_me\" mode=\"store-only\"/>" +
+                        "    </documents>" +
+                        "    <group>" +
+                        "      <node distribution-key=\"0\" hostalias=\"node0\"/>" +
+                        "    </group>" +
+                        "  </content>" +
+                        "</services>";
 
         List<String> sds = ApplicationPackageUtils.generateSchemas("index_me", "store_me");
         VespaModel model = new VespaModelCreatorWithMockPkg(getHosts(), services, sds).create();
@@ -265,7 +252,7 @@ public class IndexedTest extends ContentBaseTest {
     }
 
     @Test
-    public void requireThatIndexingDocprocGetsConfigIdBasedOnDistributionKey() {
+    void requireThatIndexingDocprocGetsConfigIdBasedOnDistributionKey() {
         VespaModel model = getIndexedVespaModel();
         ApplicationContainerCluster cluster = model.getContainerClusters().get("container");
         assertEquals("container/container.0", cluster.getContainers().get(0).getConfigId());
