@@ -1,11 +1,14 @@
-// Copyright 2019 Oath Inc. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
+// Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.application.pkg;
 
+import com.yahoo.component.Version;
 import com.yahoo.config.application.api.DeploymentInstanceSpec;
 import com.yahoo.config.application.api.DeploymentSpec;
 import com.yahoo.config.application.api.Endpoint;
+import com.yahoo.config.application.api.Endpoint.Level;
 import com.yahoo.config.application.api.ValidationId;
 import com.yahoo.config.application.api.ValidationOverrides;
+import com.yahoo.config.provision.CloudAccount;
 import com.yahoo.config.provision.CloudName;
 import com.yahoo.config.provision.Environment;
 import com.yahoo.config.provision.InstanceName;
@@ -14,18 +17,24 @@ import com.yahoo.config.provision.zone.ZoneApi;
 import com.yahoo.config.provision.zone.ZoneId;
 import com.yahoo.vespa.hosted.controller.Application;
 import com.yahoo.vespa.hosted.controller.Controller;
+import com.yahoo.vespa.hosted.controller.api.identifiers.DeploymentId;
 import com.yahoo.vespa.hosted.controller.application.EndpointId;
-import com.yahoo.vespa.hosted.controller.deployment.DeploymentSteps;
+import com.yahoo.vespa.hosted.controller.versions.VespaVersion;
 
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.joining;
 
 /**
  * This contains validators for a {@link ApplicationPackage} that depend on a {@link Controller} to perform validation.
@@ -51,6 +60,39 @@ public class ApplicationPackageValidator {
         validateEndpointChange(application, applicationPackage, instant);
         validateCompactedEndpoint(applicationPackage);
         validateSecurityClientsPem(applicationPackage);
+        validateDeprecatedElements(applicationPackage);
+        validateCloudAccounts(application, applicationPackage);
+    }
+
+    private void validateCloudAccounts(Application application, ApplicationPackage applicationPackage) {
+        Set<CloudAccount> tenantAccounts = new TreeSet<>(controller.applications().accountsOf(application.id().tenant()));
+        Set<CloudAccount> declaredAccounts = new TreeSet<>();
+        applicationPackage.deploymentSpec().cloudAccount().ifPresent(declaredAccounts::add);
+        for (DeploymentInstanceSpec instance : applicationPackage.deploymentSpec().instances())
+            for (ZoneId zone : controller.zoneRegistry().zones().controllerUpgraded().ids())
+                instance.cloudAccount(zone.environment(), Optional.of(zone.region())).ifPresent(declaredAccounts::add);
+
+        declaredAccounts.removeIf(tenantAccounts::contains);
+        declaredAccounts.removeIf(CloudAccount::isUnspecified);
+        if ( ! declaredAccounts.isEmpty())
+            throw new IllegalArgumentException("cloud accounts " +
+                                               declaredAccounts.stream().map(CloudAccount::value).collect(joining(", ", "[", "]")) +
+                                               " are not valid for tenant " +
+                                               application.id().tenant());
+    }
+
+    /** Verify that deployment spec does not use elements deprecated on a major version older than wanted major version */
+    private void validateDeprecatedElements(ApplicationPackage applicationPackage) {
+        int wantedMajor = applicationPackage.compileVersion().map(Version::getMajor)
+                                            .or(() -> applicationPackage.deploymentSpec().majorVersion())
+                                            .or(() -> controller.readVersionStatus().controllerVersion()
+                                                                .map(VespaVersion::versionNumber)
+                                                                .map(Version::getMajor))
+                                            .orElseThrow(() -> new IllegalArgumentException("Could not determine wanted major version"));
+        for (var deprecatedElement : applicationPackage.deploymentSpec().deprecatedElements()) {
+            if (deprecatedElement.majorVersion() >= wantedMajor) continue;
+            throw new IllegalArgumentException(deprecatedElement.humanReadableString());
+        }
     }
 
     /** Verify that we have the security/clients.pem file for public systems */
@@ -63,33 +105,53 @@ public class ApplicationPackageValidator {
     /** Verify that each of the production zones listed in the deployment spec exist in this system */
     private void validateSteps(DeploymentSpec deploymentSpec) {
         for (var spec : deploymentSpec.instances()) {
-            new DeploymentSteps(spec, controller::system).jobs();
-            spec.zones().stream()
-                .filter(zone -> zone.environment() == Environment.prod)
-                .forEach(zone -> {
-                    if ( ! controller.zoneRegistry().hasZone(ZoneId.from(zone.environment(),
-                                                                         zone.region().orElseThrow()))) {
-                        throw new IllegalArgumentException("Zone " + zone + " in deployment spec was not found in this system!");
-                    }
-                });
+            for (var zone : spec.zones()) {
+                Environment environment = zone.environment();
+                if (zone.region().isEmpty()) continue;
+                ZoneId zoneId = ZoneId.from(environment, zone.region().get());
+                if (!controller.zoneRegistry().hasZone(zoneId)) {
+                    throw new IllegalArgumentException("Zone " + zone + " in deployment spec was not found in this system!");
+                }
+            }
         }
     }
 
-    /** Verify that no single endpoint contains regions in different clouds */
+    /** Verify that:
+     * <ul>
+     *     <li>no single endpoint contains regions in different clouds</li>
+     *     <li>application endpoints with different regions must be contained in CGP and AWS</li>
+     * </ul>
+     */
     private void validateEndpointRegions(DeploymentSpec deploymentSpec) {
         for (var instance : deploymentSpec.instances()) {
-            for (var endpoint : instance.endpoints()) {
-                var clouds = new HashSet<CloudName>();
-                for (var region : endpoint.regions()) {
-                    for (ZoneApi zone : controller.zoneRegistry().zones().all().in(Environment.prod).in(region).zones()) {
-                        clouds.add(zone.getCloudName());
-                    }
+            validateEndpointRegions(instance.endpoints(), instance);
+        }
+        validateEndpointRegions(deploymentSpec.endpoints(), null);
+    }
+
+    private void validateEndpointRegions(List<Endpoint> endpoints, DeploymentInstanceSpec instance) {
+        for (var endpoint : endpoints) {
+            RegionName[] regions = new HashSet<>(endpoint.regions()).toArray(RegionName[]::new);
+            Set<CloudName> clouds = controller.zoneRegistry().zones().all().in(Environment.prod)
+                                              .in(regions)
+                                              .zones().stream()
+                                              .map(ZoneApi::getCloudName)
+                                              .collect(Collectors.toSet());
+            String endpointString = instance == null ? "Application endpoint '" + endpoint.endpointId() + "'"
+                                                     : "Endpoint '" + endpoint.endpointId() + "' in " + instance;
+            if (Set.of(CloudName.GCP, CloudName.AWS).containsAll(clouds)) { } // Everything is fine!
+            else if (Set.of(CloudName.YAHOO).containsAll(clouds) || Set.of(CloudName.DEFAULT).containsAll(clouds)) {
+                if (endpoint.level() == Level.application && regions.length != 1) {
+                    throw new IllegalArgumentException(endpointString + " cannot contain different regions: " +
+                                                       endpoint.regions().stream().sorted().toList());
                 }
-                if (clouds.size() != 1) {
-                    throw new IllegalArgumentException("Endpoint '" + endpoint.endpointId() + "' in " + instance +
-                                                       " cannot contain regions in different clouds: " +
-                                                       endpoint.regions().stream().sorted().collect(Collectors.toList()));
-                }
+            }
+            else if (clouds.size() == 1) {
+                throw new IllegalArgumentException("unknown cloud '" + clouds.iterator().next() + "'");
+            }
+            else {
+                throw new IllegalArgumentException(endpointString + " cannot contain regions in different clouds: " +
+                                                   endpoint.regions().stream().sorted().toList());
             }
         }
     }
@@ -102,7 +164,7 @@ public class ApplicationPackageValidator {
                                                                                                    instant));
     }
 
-    /** Verify that compactable endpoint parts (instance aname nd endpoint ID) do not clash */
+    /** Verify that compactable endpoint parts (instance name and endpoint ID) do not clash */
     private void validateCompactedEndpoint(ApplicationPackage applicationPackage) {
         Map<List<String>, InstanceEndpoint> instanceEndpoints = new HashMap<>();
         for (var instanceSpec : applicationPackage.deploymentSpec().instances()) {
@@ -172,15 +234,16 @@ public class ApplicationPackageValidator {
         return endpoints;
     }
 
-    /** Returns global service ID as a endpoint, if any global service ID is set */
+    /** Returns global service ID as an endpoint, if any global service ID is set */
     private static Optional<Endpoint> legacyEndpoint(DeploymentInstanceSpec instance) {
         return instance.globalServiceId().map(globalServiceId -> {
-            var regions = instance.zones().stream()
+            var targets = instance.zones().stream()
                                   .filter(zone -> zone.environment().isProduction())
                                   .flatMap(zone -> zone.region().stream())
-                                  .map(RegionName::value)
-                                  .collect(Collectors.toSet());
-            return new Endpoint(Optional.of(EndpointId.defaultId().id()), globalServiceId, regions);
+                                  .distinct()
+                                  .map(region -> new Endpoint.Target(region, instance.name(), 1))
+                                  .collect(Collectors.toList());
+            return new Endpoint(EndpointId.defaultId().id(), globalServiceId, Endpoint.Level.instance, targets);
         });
     }
 
