@@ -1,6 +1,7 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.messagebus;
 
+import com.yahoo.concurrent.ManualTimer;
 import com.yahoo.jrt.ListenFailedException;
 import com.yahoo.jrt.slobrok.server.Slobrok;
 import com.yahoo.messagebus.network.rpc.test.TestServer;
@@ -10,16 +11,13 @@ import com.yahoo.messagebus.test.Receptor;
 import com.yahoo.messagebus.test.SimpleMessage;
 import com.yahoo.messagebus.test.SimpleProtocol;
 import com.yahoo.messagebus.test.SimpleReply;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Simon Thoresen Hult
@@ -29,17 +27,17 @@ public class ThrottlerTestCase {
     Slobrok slobrok;
     TestServer src, dst;
 
-    @Before
+    @BeforeEach
     public void setUp() throws ListenFailedException {
         RoutingTableSpec table = new RoutingTableSpec(SimpleProtocol.NAME);
-        table.addHop("dst", "test/dst/session", Arrays.asList("test/dst/session"));
-        table.addRoute("test", Arrays.asList("dst"));
+        table.addHop("dst", "test/dst/session", List.of("test/dst/session"));
+        table.addRoute("test", List.of("dst"));
         slobrok = new Slobrok();
         src = new TestServer("test/src", table, slobrok, null);
         dst = new TestServer("test/dst", table, slobrok, null);
     }
 
-    @After
+    @AfterEach
     public void tearDown() {
         dst.destroy();
         src.destroy();
@@ -47,7 +45,7 @@ public class ThrottlerTestCase {
     }
 
     @Test
-    public void testMaxCount() {
+    void testMaxCount() {
         // Prepare a source session with throttle enabled.
         SourceSessionParams params = new SourceSessionParams().setTimeout(600.0);
         StaticThrottlePolicy policy = new StaticThrottlePolicy();
@@ -71,7 +69,7 @@ public class ThrottlerTestCase {
         // Acknowledge one message at a time, then attempt to send two more.
         for (int i = 0; i < 10; i++) {
             assertTrue(dst_q.waitSize(policy.getMaxPendingCount(), 60));
-            dst_s.acknowledge((Message)dst_q.dequeue());
+            dst_s.acknowledge((Message) dst_q.dequeue());
 
             assertNotNull(src_rr.getReply(60));
             assertTrue(src_s.send(new SimpleMessage("msg"), "test").isAccepted());
@@ -80,7 +78,7 @@ public class ThrottlerTestCase {
 
         assertTrue(dst_q.waitSize(policy.getMaxPendingCount(), 60));
         while (!dst_q.isEmpty()) {
-            dst_s.acknowledge((Message)dst_q.dequeue());
+            dst_s.acknowledge((Message) dst_q.dequeue());
         }
 
         src_s.close();
@@ -88,7 +86,7 @@ public class ThrottlerTestCase {
     }
 
     @Test
-    public void testMaxSize() {
+    void testMaxSize() {
         // Prepare a source session with throttle enabled.
         SourceSessionParams params = new SourceSessionParams().setTimeout(600.0);
         StaticThrottlePolicy policy = new StaticThrottlePolicy();
@@ -110,17 +108,17 @@ public class ThrottlerTestCase {
         assertTrue(dst_q.waitSize(2, 60));
 
         assertFalse(src_s.send(new SimpleMessage("1"), "test").isAccepted());
-        dst_s.acknowledge((Message)dst_q.dequeue());
+        dst_s.acknowledge((Message) dst_q.dequeue());
         assertNotNull(src_rr.getReply(60));
 
         assertFalse(src_s.send(new SimpleMessage("1"), "test").isAccepted());
-        dst_s.acknowledge((Message)dst_q.dequeue());
+        dst_s.acknowledge((Message) dst_q.dequeue());
         assertNotNull(src_rr.getReply(60));
 
         assertTrue(src_s.send(new SimpleMessage("12"), "test").isAccepted());
         assertTrue(dst_q.waitSize(1, 60));
         assertFalse(src_s.send(new SimpleMessage("1"), "test").isAccepted());
-        dst_s.acknowledge((Message)dst_q.dequeue());
+        dst_s.acknowledge((Message) dst_q.dequeue());
         assertNotNull(src_rr.getReply(60));
 
         // Close sessions.
@@ -129,12 +127,12 @@ public class ThrottlerTestCase {
     }
 
     @Test
-    public void testDynamicWindowSize() {
-        CustomTimer timer = new CustomTimer();
+    void testDynamicWindowSize() {
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5)
-              .setResizeRate(1);
+                .setResizeRate(1);
 
         double windowSize = getWindowSize(policy, timer, 100);
         assertTrue(windowSize >= 90 && windowSize <= 105);
@@ -153,48 +151,48 @@ public class ThrottlerTestCase {
     }
 
     @Test
-    public void testIdleTimePeriod() {
-        CustomTimer timer = new CustomTimer();
+    void testIdleTimePeriod() {
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5)
-              .setMinWindowSize(1)
-              .setResizeRate(1);
+                .setMinWindowSize(1)
+                .setResizeRate(1);
 
         double windowSize = getWindowSize(policy, timer, 100);
         assertTrue(windowSize >= 90 && windowSize <= 110);
 
         Message msg = new SimpleMessage("foo");
-        timer.millis += 30 * 1000;
+        timer.advance(30 * 1000);
         assertTrue(policy.canSend(msg, 0));
         assertTrue(windowSize >= 90 && windowSize <= 110);
 
-        timer.millis += 60 * 1000 + 1;
+        timer.advance(60 * 1000 + 1);
         assertTrue(policy.canSend(msg, 50));
         assertEquals(55, policy.getMaxPendingCount());
 
-        timer.millis += 60 * 1000 + 1;
+        timer.advance(60 * 1000 + 1);
         assertTrue(policy.canSend(msg, 0));
         assertEquals(5, policy.getMaxPendingCount());
 
     }
 
     @Test
-    public void testMinWindowSize() {
-        CustomTimer timer = new CustomTimer();
+    void testMinWindowSize() {
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5)
-              .setResizeRate(1)
-              .setMinWindowSize(150);
+                .setResizeRate(1)
+                .setMinWindowSize(150);
 
         double windowSize = getWindowSize(policy, timer, 200);
         assertTrue(windowSize >= 150 && windowSize <= 210);
     }
 
     @Test
-    public void testMaxWindowSize() {
-        CustomTimer timer = new CustomTimer();
+    void testMaxWindowSize() {
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5);
@@ -205,7 +203,7 @@ public class ThrottlerTestCase {
         assertTrue(windowSize >= 40 && windowSize <= 50);
     }
 
-    private int getWindowSize(DynamicThrottlePolicy policy, CustomTimer timer, int maxPending) {
+    private int getWindowSize(DynamicThrottlePolicy policy, ManualTimer timer, int maxPending) {
         Message msg = new SimpleMessage("foo");
         Reply reply = new SimpleReply("bar");
         reply.setContext(1);
@@ -216,8 +214,8 @@ public class ThrottlerTestCase {
                 ++numPending;
             }
 
-            long tripTime = (numPending < maxPending) ? 1000 : 1000 + (numPending - maxPending) * 1000;
-            timer.millis += tripTime;
+            long tripTime = (numPending < maxPending) ? 1000L : 1000 + (numPending - maxPending) * 1000L;
+            timer.advance(tripTime);
 
             while (--numPending >= 0) {
                 policy.processReply(reply);
