@@ -23,20 +23,20 @@ import com.yahoo.messagebus.routing.test.CustomPolicyFactory;
 import com.yahoo.messagebus.test.Receptor;
 import com.yahoo.messagebus.test.SimpleMessage;
 import com.yahoo.messagebus.test.SimpleProtocol;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.net.UnknownHostException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.logging.Logger;
+import java.util.logging.Level;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author havardpe
@@ -44,611 +44,575 @@ import static org.junit.Assert.assertTrue;
  */
 public class RoutingTestCase {
 
-    Slobrok slobrok;
-    TestServer srcServer, dstServer;
+    static final Logger log = Logger.getLogger(RoutingTestCase.class.getName());
+
+    static Slobrok slobrok;
+    static RetryTransientErrorsPolicy retryPolicy;
+    static TestServer srcServer, dstServer;
+    static int sessionNumber = 0;
+
     SourceSession srcSession;
     DestinationSession dstSession;
-    RetryTransientErrorsPolicy retryPolicy;
+    String sessName = "session";
+    String dstSessName = "dst/session";
 
-    @Before
-    public void setUp() throws ListenFailedException, UnknownHostException {
+    @BeforeAll
+    public static void commonSetup() throws ListenFailedException {
         slobrok = new Slobrok();
-        dstServer = new TestServer(new MessageBusParams().addProtocol(new SimpleProtocol()),
-                                   new RPCNetworkParams().setIdentity(new Identity("dst")).setSlobrokConfigId(
-                                           TestServer.getSlobrokConfig(slobrok)));
-        dstSession = dstServer.mb.createDestinationSession(
-                new DestinationSessionParams().setName("session").setMessageHandler(new Receptor()));
+        dstServer = new TestServer("dst", null, slobrok, new SimpleProtocol());
         retryPolicy = new RetryTransientErrorsPolicy();
         retryPolicy.setBaseDelay(0);
         srcServer = new TestServer(new MessageBusParams().setRetryPolicy(retryPolicy).addProtocol(new SimpleProtocol()),
-                                   new RPCNetworkParams().setSlobrokConfigId(TestServer.getSlobrokConfig(slobrok)));
+                                   slobrok);
+    }
+
+    @AfterAll
+    public static void commonTeardown() {
+        dstServer.destroy();
+        srcServer.destroy();
+        slobrok.stop();
+        dstServer = null;
+        srcServer = null;
+        slobrok = null;
+    }
+
+    @BeforeEach
+    public void setUp() throws ListenFailedException, UnknownHostException {
+        // reset some params:
+        retryPolicy.setEnabled(true);
+        retryPolicy.setBaseDelay(0);
+        srcServer.mb.putProtocol(new SimpleProtocol());
+        srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME));
+        // create sessions:
+        ++sessionNumber;
+        sessName = "session" + sessionNumber;
+        dstSessName = "dst/" + sessName;
+        dstSession = dstServer.mb.createDestinationSession(
+                new DestinationSessionParams().setName(sessName).setMessageHandler(new Receptor()));
         srcSession = srcServer.mb.createSourceSession(
                 new SourceSessionParams().setTimeout(600.0).setThrottlePolicy(null).setReplyHandler(new Receptor()));
-        assertTrue(srcServer.waitSlobrok("dst/session", 1));
+        // wait for session register visible:
+        assertTrue(srcServer.waitSlobrok(dstSessName, 1));
     }
 
-    @After
+    @AfterEach
     public void tearDown() {
-        slobrok.stop();
         dstSession.destroy();
-        dstServer.destroy();
         srcSession.destroy();
-        srcServer.destroy();
+        // wait for session unregister visible:
+        assertTrue(srcServer.waitSlobrok(dstSessName, 0));
     }
 
     @Test
-    public void requireThatNullRouteIsCaught() {
+    void requireThatNullRouteIsCaught() {
         assertTrue(srcSession.send(createMessage("msg")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.ILLEGAL_ROUTE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatEmptyRouteIsCaught() {
+    void requireThatEmptyRouteIsCaught() {
         assertTrue(srcSession.send(createMessage("msg"), new Route()).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.ILLEGAL_ROUTE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatHopNameIsExpanded() {
+    void requireThatHopNameIsExpanded() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addHop(new HopSpec("dst", "dst/session")));
+                .addHop(new HopSpec("dst", dstSessName)));
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("dst")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
     }
 
     @Test
-    public void requireThatRouteDirectiveWorks() {
+    void requireThatRouteDirectiveWorks() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addRoute(new RouteSpec("dst").addHop("dst/session"))
-                                       .addHop(new HopSpec("dir", "route:dst")));
+                .addRoute(new RouteSpec("dst").addHop(dstSessName))
+                .addHop(new HopSpec("dir", "route:dst")));
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("dir")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
     }
 
     @Test
-    public void requireThatRouteNameIsExpanded() {
+    void requireThatRouteNameIsExpanded() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addRoute(new RouteSpec("dst").addHop("dst/session")));
+                .addRoute(new RouteSpec("dst").addHop(dstSessName)));
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("dst")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
     }
 
     @Test
-    public void requireThatHopResolutionOverflowIsCaught() {
+    void requireThatHopResolutionOverflowIsCaught() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addHop(new HopSpec("foo", "bar"))
-                                       .addHop(new HopSpec("bar", "foo")));
+                .addHop(new HopSpec("foo", "bar"))
+                .addHop(new HopSpec("bar", "foo")));
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("foo")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.ILLEGAL_ROUTE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatRouteResolutionOverflowIsCaught() {
+    void requireThatRouteResolutionOverflowIsCaught() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addRoute(new RouteSpec("foo").addHop("route:foo")));
+                .addRoute(new RouteSpec("foo").addHop("route:foo")));
         assertTrue(srcSession.send(createMessage("msg"), "foo").isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.ILLEGAL_ROUTE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatRouteExpansionOnlyReplacesFirstHop() {
+    void requireThatRouteExpansionOnlyReplacesFirstHop() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addRoute(new RouteSpec("foo").addHop("dst/session").addHop("bar")));
+                .addRoute(new RouteSpec("foo").addHop(dstSessName).addHop("bar")));
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("route:foo baz")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         assertEquals(2, msg.getRoute().getNumHops());
         assertEquals("bar", msg.getRoute().getHop(0).toString());
         assertEquals("baz", msg.getRoute().getHop(1).toString());
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
     }
 
     @Test
-    public void requireThatErrorDirectiveWorks() {
+    void requireThatErrorDirectiveWorks() {
         Route route = Route.parse("foo/bar/baz");
         route.getHop(0).setDirective(1, new ErrorDirective("err"));
         assertTrue(srcSession.send(createMessage("msg"), route).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.ILLEGAL_ROUTE, reply.getError(0).getCode());
         assertEquals("err", reply.getError(0).getMessage());
     }
 
     @Test
-    public void requireThatIllegalSelectIsCaught() {
+    void requireThatIllegalSelectIsCaught() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory());
         srcServer.mb.putProtocol(protocol);
         Route route = Route.parse("[Custom: ]");
         assertNotNull(route);
         assertTrue(srcSession.send(createMessage("msg"), route).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.NO_SERVICES_FOR_ROUTE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatEmptySelectIsCaught() {
+    void requireThatEmptySelectIsCaught() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory());
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom]")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.NO_SERVICES_FOR_ROUTE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatPolicySelectWorks() {
+    void requireThatPolicySelectWorks() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory());
         srcServer.mb.putProtocol(protocol);
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:" + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
     }
 
     @Test
-    public void requireThatTransientErrorsAreRetried() {
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("dst/session")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+    void requireThatTransientErrorsAreRetried() {
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse(dstSessName)).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err1"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err2"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         dstSession.acknowledge(msg);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
         assertTrace(Arrays.asList("[APP_TRANSIENT_ERROR @ localhost]: err1",
-                                  "-[APP_TRANSIENT_ERROR @ localhost]: err1",
-                                  "[APP_TRANSIENT_ERROR @ localhost]: err2",
-                                  "-[APP_TRANSIENT_ERROR @ localhost]: err2"),
-                    reply.getTrace());
+                        "-[APP_TRANSIENT_ERROR @ localhost]: err1",
+                        "[APP_TRANSIENT_ERROR @ localhost]: err2",
+                        "-[APP_TRANSIENT_ERROR @ localhost]: err2"),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatTransientErrorsAreRetriedWithPolicy() {
+    void requireThatTransientErrorsAreRetriedWithPolicy() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory());
         srcServer.mb.putProtocol(protocol);
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:" + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err1"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err2"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         dstSession.acknowledge(msg);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
         assertTrace(Arrays.asList("Source session accepted a 3 byte message. 1 message(s) now pending.",
-                                  "Running routing policy 'Custom'.",
-                                  "Selecting [dst/session].",
-                                  "Component 'dst/session' selected by policy 'Custom'.",
-                                  "Resolving 'dst/session'.",
-                                  "Sending message (version ${VERSION}) from client to 'dst/session'",
-                                  "Message (type 1) received at 'dst' for session 'session'.",
-                                  "[APP_TRANSIENT_ERROR @ localhost]: err1",
-                                  "Sending reply (version ${VERSION}) from 'dst'.",
-                                  "Reply (type 0) received at client.",
-                                  "Routing policy 'Custom' merging replies.",
-                                  "Merged [dst/session].",
-                                  "Message scheduled for retry 1 in 0.0 seconds.",
-                                  "Resender resending message.",
-                                  "Running routing policy 'Custom'.",
-                                  "Selecting [dst/session].",
-                                  "Component 'dst/session' selected by policy 'Custom'.",
-                                  "Resolving 'dst/session'.",
-                                  "Sending message (version ${VERSION}) from client to 'dst/session'",
-                                  "Message (type 1) received at 'dst' for session 'session'.",
-                                  "[APP_TRANSIENT_ERROR @ localhost]: err2",
-                                  "Sending reply (version ${VERSION}) from 'dst'.",
-                                  "Reply (type 0) received at client.",
-                                  "Routing policy 'Custom' merging replies.",
-                                  "Merged [dst/session].",
-                                  "Message scheduled for retry 2 in 0.0 seconds.",
-                                  "Resender resending message.",
-                                  "Running routing policy 'Custom'.",
-                                  "Selecting [dst/session].",
-                                  "Component 'dst/session' selected by policy 'Custom'.",
-                                  "Resolving 'dst/session'.",
-                                  "Sending message (version ${VERSION}) from client to 'dst/session'",
-                                  "Message (type 1) received at 'dst' for session 'session'.",
-                                  "Sending reply (version ${VERSION}) from 'dst'.",
-                                  "Reply (type 0) received at client.",
-                                  "Routing policy 'Custom' merging replies.",
-                                  "Merged [dst/session].",
-                                  "Source session received reply. 0 message(s) now pending."),
-                    reply.getTrace());
+                        "Running routing policy 'Custom'.",
+                        "Selecting [" + dstSessName + "].",
+                        "Component '" + dstSessName + "' selected by policy 'Custom'.",
+                        "Resolving '" + dstSessName + "'.",
+                        "Sending message (version ${VERSION}) from client to '" + dstSessName + "'",
+                        "Message (type 1) received at 'dst' for session '" + sessName + "'.",
+                        "[APP_TRANSIENT_ERROR @ localhost]: err1",
+                        "Sending reply (version ${VERSION}) from 'dst'.",
+                        "Reply (type 0) received at client.",
+                        "Routing policy 'Custom' merging replies.",
+                        "Merged [" + dstSessName + "].",
+                        "Message scheduled for retry 1 in 0.0 seconds.",
+                        "Resender resending message.",
+                        "Running routing policy 'Custom'.",
+                        "Selecting [" + dstSessName + "].",
+                        "Component '" + dstSessName + "' selected by policy 'Custom'.",
+                        "Resolving '" + dstSessName + "'.",
+                        "Sending message (version ${VERSION}) from client to '" + dstSessName + "'",
+                        "Message (type 1) received at 'dst' for session '" + sessName + "'.",
+                        "[APP_TRANSIENT_ERROR @ localhost]: err2",
+                        "Sending reply (version ${VERSION}) from 'dst'.",
+                        "Reply (type 0) received at client.",
+                        "Routing policy 'Custom' merging replies.",
+                        "Merged [" + dstSessName + "].",
+                        "Message scheduled for retry 2 in 0.0 seconds.",
+                        "Resender resending message.",
+                        "Running routing policy 'Custom'.",
+                        "Selecting [" + dstSessName + "].",
+                        "Component '" + dstSessName + "' selected by policy 'Custom'.",
+                        "Resolving '" + dstSessName + "'.",
+                        "Sending message (version ${VERSION}) from client to '" + dstSessName + "'",
+                        "Message (type 1) received at 'dst' for session '" + sessName + "'.",
+                        "Sending reply (version ${VERSION}) from 'dst'.",
+                        "Reply (type 0) received at client.",
+                        "Routing policy 'Custom' merging replies.",
+                        "Merged [" + dstSessName + "].",
+                        "Source session received reply. 0 message(s) now pending."),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatRetryCanBeDisabled() {
+    void requireThatRetryCanBeDisabled() {
         retryPolicy.setEnabled(false);
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("dst/session")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse(dstSessName)).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err"));
         dstSession.reply(reply);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
+        assertNotNull(reply);
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.APP_TRANSIENT_ERROR, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatRetryCallsSelect() {
+    void requireThatRetryCallsSelect() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory());
         srcServer.mb.putProtocol(protocol);
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:" + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         dstSession.acknowledge(msg);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
-        assertTrace(Arrays.asList("Selecting [dst/session].",
-                                  "[APP_TRANSIENT_ERROR @ localhost]",
-                                  "-[APP_TRANSIENT_ERROR @ localhost]",
-                                  "Merged [dst/session].",
-                                  "Selecting [dst/session].",
-                                  "Sending reply",
-                                  "Merged [dst/session]."),
-                    reply.getTrace());
+        assertTrace(Arrays.asList("Selecting [" + dstSessName + "].",
+                        "[APP_TRANSIENT_ERROR @ localhost]",
+                        "-[APP_TRANSIENT_ERROR @ localhost]",
+                        "Merged [" + dstSessName + "].",
+                        "Selecting [" + dstSessName + "].",
+                        "Sending reply",
+                        "Merged [" + dstSessName + "]."),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatPolicyCanDisableReselectOnRetry() {
+    void requireThatPolicyCanDisableReselectOnRetry() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory(false));
         srcServer.mb.putProtocol(protocol);
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:" + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "err"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         dstSession.acknowledge(msg);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
-        assertTrace(Arrays.asList("Selecting [dst/session].",
-                                  "[APP_TRANSIENT_ERROR @ localhost]",
-                                  "-[APP_TRANSIENT_ERROR @ localhost]",
-                                  "Merged [dst/session].",
-                                  "-Selecting [dst/session].",
-                                  "Sending reply",
-                                  "Merged [dst/session]."),
-                    reply.getTrace());
+        assertTrace(Arrays.asList("Selecting [" + dstSessName + "].",
+                        "[APP_TRANSIENT_ERROR @ localhost]",
+                        "-[APP_TRANSIENT_ERROR @ localhost]",
+                        "Merged [" + dstSessName + "].",
+                        "-Selecting [" + dstSessName + "].",
+                        "Sending reply",
+                        "Merged [" + dstSessName + "]."),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatPolicyCanConsumeErrors() {
+    void requireThatPolicyCanConsumeErrors() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory(true, ErrorCode.NO_ADDRESS_FOR_SERVICE));
         srcServer.mb.putProtocol(protocol);
         retryPolicy.setEnabled(false);
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:dst/session,dst/unknown]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:" + dstSessName + ",dst/unknown]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.NO_ADDRESS_FOR_SERVICE, reply.getError(0).getCode());
-        assertTrace(Arrays.asList("Selecting [dst/session, dst/unknown].",
-                                  "[NO_ADDRESS_FOR_SERVICE @ localhost]",
-                                  "Sending reply",
-                                  "Merged [dst/session, dst/unknown]."),
-                    reply.getTrace());
+        assertTrace(Arrays.asList("Selecting [" + dstSessName + ", dst/unknown].",
+                        "[NO_ADDRESS_FOR_SERVICE @ localhost]",
+                        "Sending reply",
+                        "Merged [" + dstSessName + ", dst/unknown]."),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatPolicyOnlyConsumesDeclaredErrors() {
+    void requireThatPolicyOnlyConsumesDeclaredErrors() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory());
         srcServer.mb.putProtocol(protocol);
         retryPolicy.setEnabled(false);
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom:dst/unknown]")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.NO_ADDRESS_FOR_SERVICE, reply.getError(0).getCode());
         assertTrace(Arrays.asList("Selecting [dst/unknown].",
-                                  "[NO_ADDRESS_FOR_SERVICE @ localhost]",
-                                  "Merged [dst/unknown]."),
-                    reply.getTrace());
+                        "[NO_ADDRESS_FOR_SERVICE @ localhost]",
+                        "Merged [dst/unknown]."),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatPolicyCanExpandToPolicy() {
+    void requireThatPolicyCanExpandToPolicy() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory(true, ErrorCode.NO_ADDRESS_FOR_SERVICE));
         srcServer.mb.putProtocol(protocol);
         retryPolicy.setEnabled(false);
         assertTrue(srcSession.send(createMessage("msg"),
-                                   Route.parse("[Custom:[Custom:dst/session],[Custom:dst/unknown]]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+                Route.parse("[Custom:[Custom:" + dstSessName + "],[Custom:dst/unknown]]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.NO_ADDRESS_FOR_SERVICE, reply.getError(0).getCode());
     }
 
     @Test
-    public void requireThatReplyCanBeRemovedFromChildNodes() {
+    void requireThatReplyCanBeRemovedFromChildNodes() {
         SimpleProtocol protocol = new SimpleProtocol();
-        protocol.addPolicyFactory("Custom", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new RemoveReplyPolicy(true,
-                                             Arrays.asList(ErrorCode.NO_ADDRESS_FOR_SERVICE),
-                                             CustomPolicyFactory.parseRoutes(param),
-                                             0);
-            }
-        });
+        protocol.addPolicyFactory("Custom", param -> new RemoveReplyPolicy(true,
+                                                                           List.of(ErrorCode.NO_ADDRESS_FOR_SERVICE),
+                                                                   CustomPolicyFactory.parseRoutes(param),
+                                                                   0));
         srcServer.mb.putProtocol(protocol);
         retryPolicy.setEnabled(false);
         assertTrue(srcSession.send(createMessage("msg"),
-                                   Route.parse("[Custom:[Custom:dst/session],[Custom:dst/unknown]]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+                Route.parse("[Custom:[Custom:" + dstSessName + "],[Custom:dst/unknown]]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
         assertTrace(Arrays.asList("[NO_ADDRESS_FOR_SERVICE @ localhost]",
-                                  "-[NO_ADDRESS_FOR_SERVICE @ localhost]",
-                                  "Sending message",
-                                  "-Sending message"),
-                    reply.getTrace());
+                        "-[NO_ADDRESS_FOR_SERVICE @ localhost]",
+                        "Sending message",
+                        "-Sending message"),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatSetReplyWorks() {
+    void requireThatSetReplyWorks() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Select", new CustomPolicyFactory(true, ErrorCode.APP_FATAL_ERROR));
-        protocol.addPolicyFactory("SetReply", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new SetReplyPolicy(true, Arrays.asList(ErrorCode.APP_FATAL_ERROR), param);
-            }
-        });
+        protocol.addPolicyFactory("SetReply", param -> new SetReplyPolicy(true, List.of(ErrorCode.APP_FATAL_ERROR), param));
         srcServer.mb.putProtocol(protocol);
         retryPolicy.setEnabled(false);
         assertTrue(
-                srcSession.send(createMessage("msg"), Route.parse("[Select:[SetReply:foo],dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+                srcSession.send(createMessage("msg"), Route.parse("[Select:[SetReply:foo]," + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.APP_FATAL_ERROR, reply.getError(0).getCode());
         assertEquals("foo", reply.getError(0).getMessage());
     }
 
     @Test
-    public void requireThatReplyCanBeReusedOnRetry() {
+    void requireThatReplyCanBeReusedOnRetry() {
         SimpleProtocol protocol = new SimpleProtocol();
-        protocol.addPolicyFactory("ReuseReply", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new ReuseReplyPolicy(false,
-                                            Arrays.asList(ErrorCode.APP_FATAL_ERROR),
-                                            CustomPolicyFactory.parseRoutes(param));
-            }
-        });
-        protocol.addPolicyFactory("SetReply", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new SetReplyPolicy(false,
-                                          Arrays.asList(ErrorCode.APP_FATAL_ERROR),
-                                          param);
-            }
-        });
+        protocol.addPolicyFactory("ReuseReply", param -> new ReuseReplyPolicy(false,
+                                                                              List.of(ErrorCode.APP_FATAL_ERROR),
+                                                                      CustomPolicyFactory.parseRoutes(param)));
+        protocol.addPolicyFactory("SetReply", param -> new SetReplyPolicy(false,
+                                                                          List.of(ErrorCode.APP_FATAL_ERROR),
+                                                                  param));
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession.send(createMessage("msg"),
-                                   Route.parse("[ReuseReply:[SetReply:foo],dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+                Route.parse("[ReuseReply:[SetReply:foo]," + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_TRANSIENT_ERROR, "dst"));
         dstSession.reply(reply);
-        assertNotNull(msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60));
+        assertNotNull(msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60));
         dstSession.acknowledge(msg);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
     }
 
     @Test
-    public void requireThatReplyCanBeRemovedAndRetried() {
+    void requireThatReplyCanBeRemovedAndRetried() {
         SimpleProtocol protocol = new SimpleProtocol();
-        protocol.addPolicyFactory("RemoveReply", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new RemoveReplyPolicy(false,
-                                             Arrays.asList(ErrorCode.APP_TRANSIENT_ERROR),
-                                             CustomPolicyFactory.parseRoutes(param),
-                                             0);
-            }
-        });
-        protocol.addPolicyFactory("SetReply", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new SetReplyPolicy(false,
-                                          Arrays.asList(ErrorCode.APP_TRANSIENT_ERROR, ErrorCode.APP_FATAL_ERROR),
-                                          param);
-            }
-        });
+        protocol.addPolicyFactory("RemoveReply", param -> new RemoveReplyPolicy(false,
+                                                                                List.of(ErrorCode.APP_TRANSIENT_ERROR),
+                                                                        CustomPolicyFactory.parseRoutes(param),
+                                                                        0));
+        protocol.addPolicyFactory("SetReply", param -> new SetReplyPolicy(false,
+                                                                  Arrays.asList(ErrorCode.APP_TRANSIENT_ERROR, ErrorCode.APP_FATAL_ERROR),
+                                                                  param));
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession
-                           .send(createMessage("msg"), Route.parse("[RemoveReply:[SetReply:foo],dst/session]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+                .send(createMessage("msg"), Route.parse("[RemoveReply:[SetReply:foo]," + dstSessName + "]")).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.APP_FATAL_ERROR, reply.getError(0).getCode());
         assertEquals("foo", reply.getError(0).getMessage());
         assertTrace(Arrays.asList("Resolving '[SetReply:foo]'.",
-                                  "Resolving 'dst/session'.",
-                                  "Resender resending message.",
-                                  "Resolving 'dst/session'.",
-                                  "Resolving '[SetReply:foo]'."),
-                    reply.getTrace());
+                        "Resolving '" + dstSessName + "'.",
+                        "Resender resending message.",
+                        "Resolving '" + dstSessName + "'.",
+                        "Resolving '[SetReply:foo]'."),
+                reply.getTrace());
     }
 
     @Test
-    public void requireThatIgnoreResultWorks() {
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("?dst/session")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+    void requireThatIgnoreResultWorks() {
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse("?" + dstSessName)).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_FATAL_ERROR, "dst"));
         dstSession.reply(reply);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
-        assertTrace(Arrays.asList("Not waiting for a reply from 'dst/session'."),
-                    reply.getTrace());
+        assertTrace(List.of("Not waiting for a reply from '" + dstSessName + "'."), reply.getTrace());
     }
 
     @Test
-    public void requireThatIgnoreResultCanBeSetInHopBlueprint() {
+    void requireThatIgnoreResultCanBeSetInHopBlueprint() {
         srcServer.setupRouting(new RoutingTableSpec(SimpleProtocol.NAME)
-                                       .addHop(new HopSpec("foo", "dst/session").setIgnoreResult(true)));
+                .addHop(new HopSpec("foo", dstSessName).setIgnoreResult(true)));
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("foo")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Reply reply = new EmptyReply();
         reply.swapState(msg);
         reply.addError(new Error(ErrorCode.APP_FATAL_ERROR, "dst"));
         dstSession.reply(reply);
-        assertNotNull(reply = ((Receptor)srcSession.getReplyHandler()).getReply(60));
-        System.out.println(reply.getTrace());
+        assertNotNull(reply = ((Receptor) srcSession.getReplyHandler()).getReply(60));
         assertFalse(reply.hasErrors());
-        assertTrace(Arrays.asList("Not waiting for a reply from 'dst/session'."),
-                    reply.getTrace());
+        assertTrace(List.of("Not waiting for a reply from '" + dstSessName + "'."), reply.getTrace());
     }
 
     @Test
-    public void requireThatIgnoreFlagPersistsThroughHopLookup() {
+    void requireThatIgnoreFlagPersistsThroughHopLookup() {
         setupRouting(new RoutingTableSpec(SimpleProtocol.NAME).addHop(new HopSpec("foo", "dst/unknown")));
         assertSend("?foo");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatIgnoreFlagPersistsThroughRouteLookup() {
+    void requireThatIgnoreFlagPersistsThroughRouteLookup() {
         setupRouting(new RoutingTableSpec(SimpleProtocol.NAME).addRoute(new RouteSpec("foo").addHop("dst/unknown")));
         assertSend("?foo");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatIgnoreFlagPersistsThroughPolicySelect() {
+    void requireThatIgnoreFlagPersistsThroughPolicySelect() {
         setupPolicy("Custom", MyPolicy.newSelectAndMerge("dst/unknown"));
         assertSend("?[Custom]");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatIgnoreFlagIsSerializedWithMessage() {
-        assertSend("dst/session foo ?bar");
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+    void requireThatIgnoreFlagIsSerializedWithMessage() {
+        assertSend(dstSessName + " foo ?bar");
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         Route route = msg.getRoute();
         assertEquals(2, route.getNumHops());
@@ -663,191 +627,174 @@ public class RoutingTestCase {
     }
 
     @Test
-    public void requireThatIgnoreFlagDoesNotInterfere() {
-        setupPolicy("Custom", MyPolicy.newSelectAndMerge("dst/session"));
+    void requireThatIgnoreFlagDoesNotInterfere() {
+        setupPolicy("Custom", MyPolicy.newSelectAndMerge(dstSessName));
         assertSend("?[Custom]");
         assertTrace("-Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatEmptySelectionCanBeIgnored() {
+    void requireThatEmptySelectionCanBeIgnored() {
         setupPolicy("Custom", MyPolicy.newEmptySelection());
         assertSend("?[Custom]");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatSelectErrorCanBeIgnored() {
+    void requireThatSelectErrorCanBeIgnored() {
         setupPolicy("Custom", MyPolicy.newSelectError(ErrorCode.APP_FATAL_ERROR, "foo"));
         assertSend("?[Custom]");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatSelectExceptionCanBeIgnored() {
+    void requireThatSelectExceptionCanBeIgnored() {
         setupPolicy("Custom", MyPolicy.newSelectException(new RuntimeException()));
         assertSend("?[Custom]");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatSelectAndThrowCanBeIgnored() {
-        setupPolicy("Custom", MyPolicy.newSelectAndThrow("dst/session", new RuntimeException()));
+    void requireThatSelectAndThrowCanBeIgnored() {
+        setupPolicy("Custom", MyPolicy.newSelectAndThrow(dstSessName, new RuntimeException()));
         assertSend("?[Custom]");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatEmptyMergeCanBeIgnored() {
-        setupPolicy("Custom", MyPolicy.newEmptyMerge("dst/session"));
-        assertSend("?[Custom]");
-        assertAcknowledge();
-        assertTrace("Ignoring errors in reply.");
-    }
-
-    @Test
-    public void requireThatMergeErrorCanBeIgnored() {
-        setupPolicy("Custom", MyPolicy.newMergeError("dst/session", ErrorCode.APP_FATAL_ERROR, "foo"));
+    void requireThatEmptyMergeCanBeIgnored() {
+        setupPolicy("Custom", MyPolicy.newEmptyMerge(dstSessName));
         assertSend("?[Custom]");
         assertAcknowledge();
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatMergeExceptionCanBeIgnored() {
-        setupPolicy("Custom", MyPolicy.newMergeException("dst/session", new RuntimeException()));
+    void requireThatMergeErrorCanBeIgnored() {
+        setupPolicy("Custom", MyPolicy.newMergeError(dstSessName, ErrorCode.APP_FATAL_ERROR, "foo"));
         assertSend("?[Custom]");
         assertAcknowledge();
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatMergeAndThrowCanBeIgnored() {
-        setupPolicy("Custom", MyPolicy.newMergeAndThrow("dst/session", new RuntimeException()));
+    void requireThatMergeExceptionCanBeIgnored() {
+        setupPolicy("Custom", MyPolicy.newMergeException(dstSessName, new RuntimeException()));
         assertSend("?[Custom]");
         assertAcknowledge();
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatAllocServiceAddressCanBeIgnored() {
+    void requireThatMergeAndThrowCanBeIgnored() {
+        setupPolicy("Custom", MyPolicy.newMergeAndThrow(dstSessName, new RuntimeException()));
+        assertSend("?[Custom]");
+        assertAcknowledge();
+        assertTrace("Ignoring errors in reply.");
+    }
+
+    @Test
+    void requireThatAllocServiceAddressCanBeIgnored() {
         assertSend("?dst/unknown");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatDepthLimitCanBeIgnored() {
+    void requireThatDepthLimitCanBeIgnored() {
         setupPolicy("Custom", MyPolicy.newSelectAndMerge("[Custom]"));
         assertSend("?[Custom]");
         assertTrace("Ignoring errors in reply.");
     }
 
     @Test
-    public void requireThatRouteCanBeEmptyInDestination() {
-        assertTrue(srcSession.send(createMessage("msg"), Route.parse("dst/session")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+    void requireThatRouteCanBeEmptyInDestination() {
+        assertTrue(srcSession.send(createMessage("msg"), Route.parse(dstSessName)).isAccepted());
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         assertNull(msg.getRoute());
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
     }
 
     @Test
-    public void requireThatOnlyActiveNodesAreAborted() {
+    void requireThatOnlyActiveNodesAreAborted() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", new CustomPolicyFactory(false));
-        protocol.addPolicyFactory("SetReply", new SimpleProtocol.PolicyFactory() {
-
-            @Override
-            public RoutingPolicy create(String param) {
-                return new SetReplyPolicy(false,
-                                          Arrays.asList(ErrorCode.APP_TRANSIENT_ERROR,
-                                                        ErrorCode.APP_TRANSIENT_ERROR,
-                                                        ErrorCode.APP_FATAL_ERROR),
-                                          param);
-            }
-        });
+        protocol.addPolicyFactory("SetReply", param -> new SetReplyPolicy(false,
+                                                                  Arrays.asList(ErrorCode.APP_TRANSIENT_ERROR,
+                                                                                ErrorCode.APP_TRANSIENT_ERROR,
+                                                                                ErrorCode.APP_FATAL_ERROR),
+                                                                  param));
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession.send(createMessage("msg"),
-                                   Route.parse("[Custom:[SetReply:foo],?bar,dst/session]")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+                Route.parse("[Custom:[SetReply:foo],?bar," + dstSessName + "]")).isAccepted());
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(2, reply.getNumErrors());
         assertEquals(ErrorCode.APP_FATAL_ERROR, reply.getError(0).getCode());
         assertEquals(ErrorCode.SEND_ABORTED, reply.getError(1).getCode());
     }
 
     @Test
-    public void requireThatTimeoutWorks() {
+    void requireThatTimeoutWorks() {
         retryPolicy.setBaseDelay(0.01);
         srcSession.setTimeout(0.5);
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("dst/unknown")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(2, reply.getNumErrors());
         assertEquals(ErrorCode.NO_ADDRESS_FOR_SERVICE, reply.getError(0).getCode());
         assertEquals(ErrorCode.TIMEOUT, reply.getError(1).getCode());
     }
 
     @Test
-    public void requireThatUnknownPolicyIsCaught() {
+    void requireThatUnknownPolicyIsCaught() {
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Unknown]")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.UNKNOWN_POLICY, reply.getError(0).getCode());
     }
 
     private SimpleProtocol.PolicyFactory exceptionOnSelectThrowingMockFactory() {
-        return new SimpleProtocol.PolicyFactory() {
+        return param -> new RoutingPolicy() {
 
             @Override
-            public RoutingPolicy create(String param) {
-                return new RoutingPolicy() {
+            public void select(RoutingContext context) {
+                throw new RuntimeException("69");
+            }
 
-                    @Override
-                    public void select(RoutingContext context) {
-                        throw new RuntimeException("69");
-                    }
+            @Override
+            public void merge(RoutingContext context) {
+            }
 
-                    @Override
-                    public void merge(RoutingContext context) {
-                    }
-
-                    @Override
-                    public void destroy() {
-                    }
-                };
+            @Override
+            public void destroy() {
             }
         };
     }
 
     @Test
-    public void requireThatSelectExceptionIsCaught() {
+    void requireThatSelectExceptionIsCaught() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", exceptionOnSelectThrowingMockFactory());
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom]")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.POLICY_ERROR, reply.getError(0).getCode());
         assertTrue(reply.getError(0).getMessage().contains("69"));
     }
 
     @Test
-    public void selectExceptionIncludesStackTraceInMessage() {
+    void selectExceptionIncludesStackTraceInMessage() {
         SimpleProtocol protocol = new SimpleProtocol();
         protocol.addPolicyFactory("Custom", exceptionOnSelectThrowingMockFactory());
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom]")).isAccepted());
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertEquals(ErrorCode.POLICY_ERROR, reply.getError(0).getCode());
         // Attempting any sort of full matching of the stack trace is brittle, so
         // simplify by assuming any message which mentions the source file of the
@@ -856,39 +803,32 @@ public class RoutingTestCase {
     }
 
     @Test
-    public void requireThatMergeExceptionIsCaught() {
+    void requireThatMergeExceptionIsCaught() {
         SimpleProtocol protocol = new SimpleProtocol();
-        protocol.addPolicyFactory("Custom", new SimpleProtocol.PolicyFactory() {
+        protocol.addPolicyFactory("Custom", param -> new RoutingPolicy() {
 
             @Override
-            public RoutingPolicy create(String param) {
-                return new RoutingPolicy() {
+            public void select(RoutingContext context) {
+                context.addChild(Route.parse(dstSessName));
+            }
 
-                    @Override
-                    public void select(RoutingContext context) {
-                        context.addChild(Route.parse("dst/session"));
-                    }
+            @Override
+            public void merge(RoutingContext context) {
+                throw new RuntimeException("69");
+            }
 
-                    @Override
-                    public void merge(RoutingContext context) {
-                        throw new RuntimeException("69");
-                    }
+            @Override
+            public void destroy() {
 
-                    @Override
-                    public void destroy() {
-
-                    }
-                };
             }
         });
         srcServer.mb.putProtocol(protocol);
         assertTrue(srcSession.send(createMessage("msg"), Route.parse("[Custom]")).isAccepted());
-        Message msg = ((Receptor)dstSession.getMessageHandler()).getMessage(60);
+        Message msg = ((Receptor) dstSession.getMessageHandler()).getMessage(60);
         assertNotNull(msg);
         dstSession.acknowledge(msg);
-        Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
+        Reply reply = ((Receptor) srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertEquals(1, reply.getNumErrors());
         assertEquals(ErrorCode.POLICY_ERROR, reply.getError(0).getCode());
         assertTrue(reply.getError(0).getMessage().contains("69"));
@@ -929,7 +869,6 @@ public class RoutingTestCase {
     private void assertTrace(String... expectedTrace) {
         Reply reply = ((Receptor)srcSession.getReplyHandler()).getReply(60);
         assertNotNull(reply);
-        System.out.println(reply.getTrace());
         assertFalse(reply.hasErrors());
         assertTrace(Arrays.asList(expectedTrace), reply.getTrace());
     }
@@ -940,11 +879,11 @@ public class RoutingTestCase {
             String line = expected.get(i).replaceFirst("\\$\\{VERSION\\}", Vtag.currentVersion.toString());
             if (line.charAt(0) == '-') {
                 String str = line.substring(1);
-                assertTrue("Line " + i + " '" + str + "' not expected.",
-                           actual.indexOf(str, pos + 1) < 0);
+                assertTrue(actual.indexOf(str, pos + 1) < 0,
+                           "Line " + i + " '" + str + "' not expected.");
             } else {
                 pos = actual.indexOf(line, pos + 1);
-                assertTrue("Line " + i + " '" + line + "' missing.", pos >= 0);
+                assertTrue(pos >= 0, "Line " + i + " '" + line + "' missing.");
             }
         }
     }
