@@ -10,15 +10,21 @@ import com.yahoo.config.provision.NodeType;
 import com.yahoo.config.provision.Zone;
 import com.yahoo.transaction.Mutex;
 import com.yahoo.transaction.NestedTransaction;
+import com.yahoo.vespa.applicationmodel.HostName;
+import com.yahoo.vespa.applicationmodel.InfrastructureApplication;
 import com.yahoo.vespa.hosted.provision.LockedNodeList;
 import com.yahoo.vespa.hosted.provision.NoSuchNodeException;
 import com.yahoo.vespa.hosted.provision.Node;
 import com.yahoo.vespa.hosted.provision.NodeList;
 import com.yahoo.vespa.hosted.provision.NodeMutex;
+import com.yahoo.vespa.hosted.provision.applications.Applications;
 import com.yahoo.vespa.hosted.provision.maintenance.NodeFailer;
-import com.yahoo.vespa.hosted.provision.node.filter.StateFilter;
+import com.yahoo.vespa.hosted.provision.node.filter.NodeFilter;
 import com.yahoo.vespa.hosted.provision.persistence.CuratorDatabaseClient;
+import com.yahoo.vespa.orchestrator.HostNameNotFoundException;
+import com.yahoo.vespa.orchestrator.Orchestrator;
 
+import javax.ws.rs.NotFoundException;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
@@ -53,14 +59,18 @@ public class Nodes {
 
     private static final Logger log = Logger.getLogger(Nodes.class.getName());
 
+    private final CuratorDatabaseClient db;
     private final Zone zone;
     private final Clock clock;
-    private final CuratorDatabaseClient db;
+    private final Orchestrator orchestrator;
+    private final Applications applications;
 
-    public Nodes(CuratorDatabaseClient db, Zone zone, Clock clock) {
+    public Nodes(CuratorDatabaseClient db, Zone zone, Clock clock, Orchestrator orchestrator, Applications applications) {
         this.zone = zone;
         this.clock = clock;
         this.db = db;
+        this.orchestrator = orchestrator;
+        this.applications = applications;
     }
 
     /** Read and write all nodes to make sure they are stored in the latest version of the serialized format */
@@ -121,15 +131,13 @@ public class Nodes {
     /** Adds a list of newly created reserved nodes to the node repository */
     public List<Node> addReservedNodes(LockedNodeList nodes) {
         for (Node node : nodes) {
-            if ( node.flavor().getType() != Flavor.Type.DOCKER_CONTAINER)
+            if (node.flavor().getType() != Flavor.Type.DOCKER_CONTAINER)
                 illegal("Cannot add " + node + ": This is not a child node");
             if (node.allocation().isEmpty())
                 illegal("Cannot add " + node + ": Child nodes need to be allocated");
             Optional<Node> existing = node(node.hostname());
             if (existing.isPresent())
-                illegal("Cannot add " + node + ": A node with this name already exists (" +
-                        existing.get() + ", " + existing.get().history() + "). Node to be added: " +
-                        node + ", " + node.history());
+                illegal("Cannot add " + node + ": A node with this name already exists");
         }
         return db.addNodesInState(nodes.asList(), Node.State.reserved, Agent.system);
     }
@@ -182,36 +190,23 @@ public class Nodes {
         }
     }
 
-    /** Sets a list of nodes ready and returns the nodes in the ready state */
-    public List<Node> setReady(List<Node> nodes, Agent agent, String reason) {
-        try (Mutex lock = lockUnallocated()) {
-            List<Node> nodesWithResetFields = nodes.stream()
-                                                   .map(node -> {
-                                                       if (node.state() != Node.State.provisioned && node.state() != Node.State.dirty)
-                                                           illegal("Can not set " + node + " ready. It is not provisioned or dirty.");
-                                                       return node.withWantToRetire(false,
-                                                                                    false,
-                                                                                    false,
-                                                                                    Agent.system,
-                                                                                    clock.instant());
-                                                   })
-                                                   .collect(Collectors.toList());
-            return db.writeTo(Node.State.ready, nodesWithResetFields, agent, Optional.of(reason));
-        }
+    /** Sets a node to ready and returns the node in the ready state */
+    public Node setReady(NodeMutex nodeMutex, Agent agent, String reason) {
+        Node node = nodeMutex.node();
+        if (node.state() != Node.State.provisioned && node.state() != Node.State.dirty)
+            illegal("Can not set " + node + " ready. It is not provisioned or dirty.");
+        if (node.status().wantToDeprovision() || node.status().wantToRebuild())
+            return park(node.hostname(), false, agent, reason);
+
+        return db.writeTo(Node.State.ready, node, agent, Optional.of(reason));
     }
 
-    public Node setReady(String hostname, Agent agent, String reason) {
-        Node nodeToReady = requireNode(hostname);
-        if (nodeToReady.state() == Node.State.ready) return nodeToReady;
-        return setReady(List.of(nodeToReady), agent, reason).get(0);
-    }
-
-    /** Reserve nodes. This method does <b>not</b> lock the node repository */
+    /** Reserve nodes. This method does <b>not</b> lock the node repository. */
     public List<Node> reserve(List<Node> nodes) {
         return db.writeTo(Node.State.reserved, nodes, Agent.application, Optional.empty());
     }
 
-    /** Activate nodes. This method does <b>not</b> lock the node repository */
+    /** Activate nodes. This method does <b>not</b> lock the node repository. */
     public List<Node> activate(List<Node> nodes, NestedTransaction transaction) {
         return db.writeTo(Node.State.active, nodes, Agent.application, Optional.empty(), transaction);
     }
@@ -220,13 +215,14 @@ public class Nodes {
      * Sets a list of nodes to have their allocation removable (active to inactive) in the node repository.
      *
      * @param application the application the nodes belong to
-     * @param nodes the nodes to make removable. These nodes MUST be in the active state.
+     * @param nodes the nodes to make removable. These nodes MUST be in the active state
+     * @param reusable move the node directly to {@link Node.State#dirty} after removal
      */
-    public void setRemovable(ApplicationId application, List<Node> nodes) {
-        try (Mutex lock = lock(application)) {
+    public void setRemovable(ApplicationId application, List<Node> nodes, boolean reusable) {
+        try (Mutex lock = applications.lock(application)) {
             List<Node> removableNodes = nodes.stream()
-                                             .map(node -> node.with(node.allocation().get().removable(true)))
-                                             .collect(Collectors.toList());
+                                             .map(node -> node.with(node.allocation().get().removable(true, reusable)))
+                                             .toList();
             write(removableNodes, lock);
         }
     }
@@ -241,9 +237,12 @@ public class Nodes {
 
         var stateless = NodeList.copyOf(nodes).stateless();
         var stateful  = NodeList.copyOf(nodes).stateful();
+        var statefulToInactive  = stateful.not().reusable();
+        var statefulToDirty = stateful.reusable();
         List<Node> written = new ArrayList<>();
         written.addAll(deallocate(stateless.asList(), Agent.application, "Deactivated by application", transaction.nested()));
-        written.addAll(db.writeTo(Node.State.inactive, stateful.asList(), Agent.application, Optional.empty(), transaction.nested()));
+        written.addAll(deallocate(statefulToDirty.asList(), Agent.application, "Deactivated by application (recycled)", transaction.nested()));
+        written.addAll(db.writeTo(Node.State.inactive, statefulToInactive.asList(), Agent.application, Optional.empty(), transaction.nested()));
         return written;
     }
 
@@ -275,23 +274,18 @@ public class Nodes {
     }
 
     public List<Node> deallocateRecursively(String hostname, Agent agent, String reason) {
-        Node nodeToDirty = node(hostname).orElseThrow(() ->
-                                                                 new IllegalArgumentException("Could not deallocate " + hostname + ": Node not found"));
+        Node nodeToDirty = node(hostname).orElseThrow(() -> new NotFoundException("Could not deallocate " + hostname + ": Node not found"));
 
         List<Node> nodesToDirty =
                 (nodeToDirty.type().isHost() ?
                  Stream.concat(list().childrenOf(hostname).asList().stream(), Stream.of(nodeToDirty)) :
-                 Stream.of(nodeToDirty))
-                        .filter(node -> node.state() != Node.State.dirty)
-                        .collect(Collectors.toList());
-
+                 Stream.of(nodeToDirty)).filter(node -> node.state() != Node.State.dirty).toList();
         List<String> hostnamesNotAllowedToDirty = nodesToDirty.stream()
                                                               .filter(node -> node.state() != Node.State.provisioned)
                                                               .filter(node -> node.state() != Node.State.failed)
                                                               .filter(node -> node.state() != Node.State.parked)
                                                               .filter(node -> node.state() != Node.State.breakfixed)
-                                                              .map(Node::hostname)
-                                                              .collect(Collectors.toList());
+                                                              .map(Node::hostname).toList();
         if ( ! hostnamesNotAllowedToDirty.isEmpty())
             illegal("Could not deallocate " + nodeToDirty + ": " +
                     hostnamesNotAllowedToDirty + " are not in states [provisioned, failed, parked, breakfixed]");
@@ -318,7 +312,12 @@ public class Nodes {
         if (parkOnDeallocationOf(node, agent)) {
             return park(node.hostname(), false, agent, reason, transaction);
         } else {
-            return db.writeTo(Node.State.dirty, List.of(node), agent, Optional.of(reason), transaction).get(0);
+            Node.State toState = Node.State.dirty;
+            if (node.state() == Node.State.parked && node.type().isHost()) {
+                if (node.status().wantToDeprovision()) illegal("Cannot move " + node + " to " + toState + ": It's being deprovisioned");
+                if (node.status().wantToRebuild()) illegal("Cannot move " + node + " to " + toState + ": It's being rebuilt");
+            }
+            return db.writeTo(toState, List.of(node), agent, Optional.of(reason), transaction).get(0);
         }
     }
 
@@ -329,11 +328,11 @@ public class Nodes {
      * @throws NoSuchNodeException if the node is not found
      */
     public Node fail(String hostname, Agent agent, String reason) {
-        return fail(hostname, true, agent, reason);
+        return fail(hostname, false, agent, reason);
     }
 
-    public Node fail(String hostname, boolean keepAllocation, Agent agent, String reason) {
-        return move(hostname, Node.State.failed, agent, keepAllocation, Optional.of(reason));
+    public Node fail(String hostname, boolean wantToDeprovision, Agent agent, String reason) {
+        return move(hostname, Node.State.failed, agent, wantToDeprovision, Optional.of(reason));
     }
 
     /**
@@ -348,7 +347,7 @@ public class Nodes {
         List<Node> changed = performOn(children, (node, lock) -> failOrMark(node, agent, reason, lock));
 
         if (children.state(Node.State.active).isEmpty())
-            changed.add(move(hostname, Node.State.failed, agent, true, Optional.of(reason)));
+            changed.add(move(hostname, Node.State.failed, agent, false, Optional.of(reason)));
         else
             changed.addAll(performOn(NodeList.of(node(hostname).orElseThrow()), (node, lock) -> failOrMark(node, agent, reason, lock)));
 
@@ -361,7 +360,7 @@ public class Nodes {
             write(node, lock);
             return node;
         } else {
-            return move(node.hostname(), Node.State.failed, agent, true, Optional.of(reason));
+            return move(node.hostname(), Node.State.failed, agent, false, Optional.of(reason));
         }
     }
 
@@ -371,15 +370,15 @@ public class Nodes {
      * @return the node in its new state
      * @throws NoSuchNodeException if the node is not found
      */
-    public Node park(String hostname, boolean keepAllocation, Agent agent, String reason) {
+    public Node park(String hostname, boolean wantToDeprovision, Agent agent, String reason) {
         NestedTransaction transaction = new NestedTransaction();
-        Node parked = park(hostname, keepAllocation, agent, reason, transaction);
+        Node parked = park(hostname, wantToDeprovision, agent, reason, transaction);
         transaction.commit();
         return parked;
     }
 
-    private Node park(String hostname, boolean keepAllocation, Agent agent, String reason, NestedTransaction transaction) {
-        return move(hostname, Node.State.parked, agent, keepAllocation, Optional.of(reason), transaction);
+    private Node park(String hostname, boolean wantToDeprovision, Agent agent, String reason, NestedTransaction transaction) {
+        return move(hostname, Node.State.parked, agent, wantToDeprovision, Optional.of(reason), transaction);
     }
 
     /**
@@ -398,7 +397,7 @@ public class Nodes {
      * @throws NoSuchNodeException if the node is not found
      */
     public Node reactivate(String hostname, Agent agent, String reason) {
-        return move(hostname, Node.State.active, agent, true, Optional.of(reason));
+        return move(hostname, Node.State.active, agent, false, Optional.of(reason));
     }
 
     /**
@@ -410,7 +409,7 @@ public class Nodes {
             requireBreakfixable(node);
             NestedTransaction transaction = new NestedTransaction();
             List<Node> removed = removeChildren(node, false, transaction);
-            removed.add(move(node.hostname(), Node.State.breakfixed, agent, true, Optional.of(reason), transaction));
+            removed.add(move(node.hostname(), Node.State.breakfixed, agent, false, Optional.of(reason), transaction));
             transaction.commit();
             return removed;
         }
@@ -419,39 +418,37 @@ public class Nodes {
     private List<Node> moveRecursively(String hostname, Node.State toState, Agent agent, Optional<String> reason) {
         NestedTransaction transaction = new NestedTransaction();
         List<Node> moved = list().childrenOf(hostname).asList().stream()
-                                 .map(child -> move(child.hostname(), toState, agent, true, reason, transaction))
+                                 .map(child -> move(child.hostname(), toState, agent, false, reason, transaction))
                                  .collect(Collectors.toList());
-        moved.add(move(hostname, toState, agent, true, reason, transaction));
+        moved.add(move(hostname, toState, agent, false, reason, transaction));
         transaction.commit();
         return moved;
     }
 
     /** Move a node to given state */
-    private Node move(String hostname, Node.State toState, Agent agent, boolean keepAllocation, Optional<String> reason) {
+    private Node move(String hostname, Node.State toState, Agent agent, boolean wantToDeprovision, Optional<String> reason) {
         NestedTransaction transaction = new NestedTransaction();
-        Node moved = move(hostname, toState, agent, keepAllocation, reason, transaction);
+        Node moved = move(hostname, toState, agent, wantToDeprovision, reason, transaction);
         transaction.commit();
         return moved;
     }
 
     /** Move a node to given state as part of a transaction */
-    private Node move(String hostname, Node.State toState, Agent agent, boolean keepAllocation, Optional<String> reason, NestedTransaction transaction) {
+    private Node move(String hostname, Node.State toState, Agent agent, boolean wantToDeprovision, Optional<String> reason, NestedTransaction transaction) {
         // TODO: Work out a safe lock acquisition strategy for moves. Lock is only held while adding operations to
         //       transaction, but lock must also be held while committing
         try (NodeMutex lock = lockAndGetRequired(hostname)) {
             Node node = lock.node();
             if (toState == Node.State.active) {
                 if (node.allocation().isEmpty()) illegal("Could not set " + node + " active: It has no allocation");
-                if (!keepAllocation) illegal("Could not set " + node + " active: Requested to discard allocation");
                 for (Node currentActive : list(Node.State.active).owner(node.allocation().get().owner())) {
                     if (node.allocation().get().membership().cluster().equals(currentActive.allocation().get().membership().cluster())
                         && node.allocation().get().membership().index() == currentActive.allocation().get().membership().index())
                         illegal("Could not set " + node + " active: Same cluster and index as " + currentActive);
                 }
             }
-            if (!keepAllocation && node.allocation().isPresent()) {
-                node = node.withoutAllocation();
-            }
+            if (wantToDeprovision)
+                node = node.withWantToRetire(wantToDeprovision, wantToDeprovision, agent, clock.instant());
             if (toState == Node.State.deprovisioned) {
                 node = node.with(IP.Config.EMPTY);
             }
@@ -464,21 +461,27 @@ public class Nodes {
      * containers this will remove the node from node repository, otherwise the node will be moved to state ready.
      */
     public Node markNodeAvailableForNewAllocation(String hostname, Agent agent, String reason) {
-        Node node = requireNode(hostname);
-        if (node.flavor().getType() == Flavor.Type.DOCKER_CONTAINER && node.type() == NodeType.tenant) {
-            if (node.state() != Node.State.dirty)
-                illegal("Cannot make " + node  + " available for new allocation as it is not in state [dirty]");
-            return removeRecursively(node, true).get(0);
+        try (NodeMutex nodeMutex = lockAndGetRequired(hostname)) {
+            Node node = nodeMutex.node();
+            if (node.type() == NodeType.tenant) {
+                if (node.state() != Node.State.dirty)
+                    illegal("Cannot make " + node + " available for new allocation as it is not in state [dirty]");
+
+                NestedTransaction transaction = new NestedTransaction();
+                db.removeNodes(List.of(node), transaction);
+                transaction.commit();
+                return node;
+            }
+
+            if (node.state() == Node.State.ready) return node;
+
+            Node parentHost = node.parentHostname().flatMap(this::node).orElse(node);
+            List<String> failureReasons = NodeFailer.reasonsToFailHost(parentHost);
+            if (!failureReasons.isEmpty())
+                illegal(node + " cannot be readied because it has hard failures: " + failureReasons);
+
+            return setReady(nodeMutex, agent, reason);
         }
-
-        if (node.state() == Node.State.ready) return node;
-
-        Node parentHost = node.parentHostname().flatMap(this::node).orElse(node);
-        List<String> failureReasons = NodeFailer.reasonsToFailParentHost(parentHost);
-        if ( ! failureReasons.isEmpty())
-            illegal(node + " cannot be readied because it has hard failures: " + failureReasons);
-
-        return setReady(List.of(node), agent, reason).get(0);
     }
 
     /**
@@ -495,13 +498,13 @@ public class Nodes {
         try (Mutex lock = lockUnallocated()) {
             requireRemovable(node, false, force);
             NestedTransaction transaction = new NestedTransaction();
-            final List<Node> removed;
+            List<Node> removed;
             if (!node.type().isHost()) {
                 removed = List.of(node);
                 db.removeNodes(removed, transaction);
             } else {
                 removed = removeChildren(node, force, transaction);
-                if (zone.getCloud().dynamicProvisioning()) {
+                if (zone.cloud().dynamicProvisioning()) {
                     db.removeNodes(List.of(node), transaction);
                 } else {
                     move(node.hostname(), Node.State.deprovisioned, Agent.system, false, Optional.empty(), transaction);
@@ -571,7 +574,7 @@ public class Nodes {
      *  - Node is in parked or failed state
      */
     private void requireBreakfixable(Node node) {
-        if (zone.getCloud().dynamicProvisioning()) {
+        if (zone.cloud().dynamicProvisioning()) {
             illegal("Can not breakfix in zone: " + zone);
         }
 
@@ -591,7 +594,7 @@ public class Nodes {
      * @return the nodes in their new state
      */
     public List<Node> restartActive(Predicate<Node> filter) {
-        return restart(StateFilter.from(Node.State.active).and(filter));
+        return restart(NodeFilter.in(Set.of(Node.State.active)).and(filter));
     }
 
     /**
@@ -619,10 +622,7 @@ public class Nodes {
      * @return the nodes in their new state
      */
     public List<Node> upgradeOs(Predicate<Node> filter, Optional<Version> version) {
-        return performOn(filter, (node, lock) -> {
-            var newStatus = node.status().withOsVersion(node.status().osVersion().withWanted(version));
-            return write(node.with(newStatus), lock);
-        });
+        return performOn(filter, (node, lock) -> write(node.withWantedOsVersion(version), lock));
     }
 
     /** Retire nodes matching given filter */
@@ -632,31 +632,37 @@ public class Nodes {
 
     /** Retire and deprovision given host and all of its children */
     public List<Node> deprovision(String hostname, Agent agent, Instant instant) {
-        return decommission(hostname, DecommissionOperation.deprovision, agent, instant);
+        return decommission(hostname, HostOperation.deprovision, agent, instant);
     }
 
-    /** Retire and rebuild given host and all of its children */
-    public List<Node> rebuild(String hostname, Agent agent, Instant instant) {
-        return decommission(hostname, DecommissionOperation.rebuild, agent, instant);
+    /** Rebuild given host */
+    public List<Node> rebuild(String hostname, boolean soft, Agent agent, Instant instant) {
+        return decommission(hostname, soft ? HostOperation.softRebuild : HostOperation.rebuild, agent, instant);
     }
 
-    private List<Node> decommission(String hostname, DecommissionOperation op, Agent agent, Instant instant) {
+    private List<Node> decommission(String hostname, HostOperation op, Agent agent, Instant instant) {
         Optional<NodeMutex> nodeMutex = lockAndGet(hostname);
         if (nodeMutex.isEmpty()) return List.of();
         Node host = nodeMutex.get().node();
         if (!host.type().isHost()) throw new IllegalArgumentException("Cannot " + op + " non-host " + host);
-        List<Node> result;
-        boolean wantToDeprovision = op == DecommissionOperation.deprovision;
-        boolean wantToRebuild = op == DecommissionOperation.rebuild;
+
+        boolean wantToDeprovision = op == HostOperation.deprovision;
+        boolean wantToRebuild = op == HostOperation.rebuild || op == HostOperation.softRebuild;
+        boolean wantToRetire = op.needsRetirement();
+        List<Node> result = new ArrayList<>();
         try (NodeMutex lock = nodeMutex.get(); Mutex allocationLock = lockUnallocated()) {
-            // This takes allocationLock to prevent any further allocation of nodes on this host
-            host = lock.node();
-            result = performOn(list(allocationLock).childrenOf(host), (node, nodeLock) -> {
-                Node newNode = node.withWantToRetire(true, wantToDeprovision, wantToRebuild, agent, instant);
+            // Modify parent with wantToRetire while holding the allocationLock to prevent
+            // any further allocation of nodes on this host
+            Node newHost = lock.node().withWantToRetire(wantToRetire, wantToDeprovision, wantToRebuild, agent, instant);
+            result.add(write(newHost, lock));
+        }
+
+        if (wantToRetire) { // Apply recursively if we're retiring
+            List<Node> updatedNodes = performOn(list().childrenOf(host), (node, nodeLock) -> {
+                Node newNode = node.withWantToRetire(wantToRetire, wantToDeprovision, wantToRebuild, agent, instant);
                 return write(newNode, nodeLock);
             });
-            Node newHost = host.withWantToRetire(true, wantToDeprovision, wantToRebuild, agent, instant);
-            result.add(write(newHost, lock));
+            result.addAll(updatedNodes);
         }
         return result;
     }
@@ -697,8 +703,9 @@ public class Nodes {
 
         // Group matching nodes by the lock needed
         for (Node node : nodes) {
-            if (node.allocation().isPresent())
-                allocatedNodes.put(node.allocation().get().owner(), node);
+            Optional<ApplicationId> applicationId = applicationIdForLock(node);
+            if (applicationId.isPresent())
+                allocatedNodes.put(applicationId.get(), node);
             else
                 unallocatedNodes.add(node);
         }
@@ -713,7 +720,7 @@ public class Nodes {
             }
         }
         for (Map.Entry<ApplicationId, List<Node>> applicationNodes : allocatedNodes.entrySet()) {
-            try (Mutex lock = lock(applicationNodes.getKey())) {
+            try (Mutex lock = applications.lock(applicationNodes.getKey())) {
                 for (Node node : applicationNodes.getValue()) {
                     Optional<Node> currentNode = db.readNode(node.hostname());  // Re-read while holding lock
                     if (currentNode.isEmpty()) continue;
@@ -725,13 +732,14 @@ public class Nodes {
     }
 
     public boolean canAllocateTenantNodeTo(Node host) {
-        return canAllocateTenantNodeTo(host, zone.getCloud().dynamicProvisioning());
+        return canAllocateTenantNodeTo(host, zone.cloud().dynamicProvisioning());
     }
 
-    public static boolean canAllocateTenantNodeTo(Node host, boolean dynamicProvisioning) {
+    public boolean canAllocateTenantNodeTo(Node host, boolean dynamicProvisioning) {
         if ( ! host.type().canRun(NodeType.tenant)) return false;
         if (host.status().wantToRetire()) return false;
         if (host.allocation().map(alloc -> alloc.membership().retired()).orElse(false)) return false;
+        if (suspended(host)) return false;
 
         if (dynamicProvisioning)
             return EnumSet.of(Node.State.active, Node.State.ready, Node.State.provisioned).contains(host.state());
@@ -739,27 +747,25 @@ public class Nodes {
             return host.state() == Node.State.active;
     }
 
-    /** Create a lock which provides exclusive rights to making changes to the given application */
-    // TODO: Move to Applications
-    public Mutex lock(ApplicationId application) {
-        return db.lock(application);
-    }
-
-    /** Create a lock with a timeout which provides exclusive rights to making changes to the given application */
-    public Mutex lock(ApplicationId application, Duration timeout) {
-        return db.lock(application, timeout);
+    public boolean suspended(Node node) {
+        try {
+            return orchestrator.getNodeStatus(new HostName(node.hostname())).isSuspended();
+        } catch (HostNameNotFoundException e) {
+            // Treat it as not suspended
+            return false;
+        }
     }
 
     /** Create a lock which provides exclusive rights to modifying unallocated nodes */
     public Mutex lockUnallocated() { return db.lockInactive(); }
 
     /** Returns the unallocated/application lock, and the node acquired under that lock. */
-    public Optional<NodeMutex> lockAndGet(Node node) {
+    private Optional<NodeMutex> lockAndGet(Node node, Optional<Duration> timeout) {
         Node staleNode = node;
 
         final int maxRetries = 4;
         for (int i = 0; i < maxRetries; ++i) {
-            Mutex lockToClose = lock(staleNode);
+            Mutex lockToClose = lock(staleNode, timeout);
             try {
                 // As an optimization we first try finding the node in the same state
                 Optional<Node> freshNode = node(staleNode.hostname(), staleNode.state());
@@ -770,8 +776,9 @@ public class Nodes {
                     }
                 }
 
-                if (Objects.equals(freshNode.get().allocation().map(Allocation::owner),
-                                   staleNode.allocation().map(Allocation::owner))) {
+                if (node.type() != NodeType.tenant ||
+                        Objects.equals(freshNode.get().allocation().map(Allocation::owner),
+                                       staleNode.allocation().map(Allocation::owner))) {
                     NodeMutex nodeMutex = new NodeMutex(freshNode.get(), lockToClose);
                     lockToClose = null;
                     return Optional.of(nodeMutex);
@@ -794,6 +801,17 @@ public class Nodes {
     }
 
     /** Returns the unallocated/application lock, and the node acquired under that lock. */
+    public Optional<NodeMutex> lockAndGet(String hostname, Duration timeout) {
+        return node(hostname).flatMap(node -> lockAndGet(node, Optional.of(timeout)));
+    }
+
+    /** Returns the unallocated/application lock, and the node acquired under that lock. */
+    public Optional<NodeMutex> lockAndGet(Node node) { return lockAndGet(node, Optional.empty()); }
+
+    /** Returns the unallocated/application lock, and the node acquired under that lock. */
+    public Optional<NodeMutex> lockAndGet(Node node, Duration timeout) { return lockAndGet(node, Optional.of(timeout)); }
+
+    /** Returns the unallocated/application lock, and the node acquired under that lock. */
     public NodeMutex lockAndGetRequired(Node node) {
         return lockAndGet(node).orElseThrow(() -> new NoSuchNodeException("No node with hostname '" + node.hostname() + "'"));
     }
@@ -803,36 +821,75 @@ public class Nodes {
         return lockAndGet(hostname).orElseThrow(() -> new NoSuchNodeException("No node with hostname '" + hostname + "'"));
     }
 
-    private Mutex lock(Node node) {
-        return node.allocation().isPresent() ? lock(node.allocation().get().owner()) : lockUnallocated();
+    /** Returns the unallocated/application lock, and the node acquired under that lock. */
+    public NodeMutex lockAndGetRequired(String hostname, Duration timeout) {
+        return lockAndGet(hostname, timeout).orElseThrow(() -> new NoSuchNodeException("No node with hostname '" + hostname + "'"));
+    }
+
+    private Mutex lock(Node node, Optional<Duration> timeout) {
+        Optional<ApplicationId> application = applicationIdForLock(node);
+        if (application.isPresent())
+            return timeout.map(t -> applications.lock(application.get(), t))
+                          .orElseGet(() -> applications.lock(application.get()));
+        else
+            return timeout.map(db::lockInactive).orElseGet(db::lockInactive);
     }
 
     private Node requireNode(String hostname) {
         return node(hostname).orElseThrow(() -> new NoSuchNodeException("No node with hostname '" + hostname + "'"));
     }
 
-    private void illegal(String message) {
+    /** Returns the application ID that should be used for locking when modifying this node */
+    private static Optional<ApplicationId> applicationIdForLock(Node node) {
+        return switch (node.type()) {
+            case tenant -> node.allocation().map(Allocation::owner);
+            case host -> Optional.of(InfrastructureApplication.TENANT_HOST.id());
+            case config -> Optional.of(InfrastructureApplication.CONFIG_SERVER.id());
+            case confighost -> Optional.of(InfrastructureApplication.CONFIG_SERVER_HOST.id());
+            case controller -> Optional.of(InfrastructureApplication.CONTROLLER.id());
+            case controllerhost -> Optional.of(InfrastructureApplication.CONTROLLER_HOST.id());
+            case proxy -> Optional.of(InfrastructureApplication.PROXY.id());
+            case proxyhost -> Optional.of(InfrastructureApplication.PROXY_HOST.id());
+        };
+    }
+
+    private static void illegal(String message) {
         throw new IllegalArgumentException(message);
     }
 
     /** Returns whether node should be parked when deallocated by given agent */
     private static boolean parkOnDeallocationOf(Node node, Agent agent) {
-        if (node.state() == Node.State.parked) return false;
-        if (agent == Agent.operator) return false;
-        boolean retirementRequestedByOperator = node.status().wantToRetire() &&
-                                                node.history().event(History.Event.Type.wantToRetire)
-                                                    .map(History.Event::agent)
-                                                    .map(a -> a == Agent.operator)
-                                                    .orElse(false);
-        return node.status().wantToDeprovision() ||
-               node.status().wantToRebuild() ||
-               retirementRequestedByOperator;
+        return  agent != Agent.operator &&
+               !node.status().wantToDeprovision() &&
+                node.status().wantToRetire() &&
+                node.history().event(History.Event.Type.wantToRetire)
+                              .map(History.Event::agent)
+                              .map(a -> a == Agent.operator)
+                              .orElse(false);
     }
 
-    /** The different ways a host can be decommissioned */
-    private enum DecommissionOperation {
-        deprovision,
-        rebuild,
+    private enum HostOperation {
+
+        /** Host is deprovisioned and data is destroyed */
+        deprovision(true),
+
+        /** Host is deprovisioned, the same host is later re-provisioned and data is destroyed */
+        rebuild(true),
+
+        /** Host is stopped and re-bootstrapped, data is preserved */
+        softRebuild(false);
+
+        private final boolean needsRetirement;
+
+        HostOperation(boolean needsRetirement) {
+            this.needsRetirement = needsRetirement;
+        }
+
+        /** Returns whether this operation requires the host and its children to be retired */
+        public boolean needsRetirement() {
+            return needsRetirement;
+        }
+
     }
 
 }
