@@ -10,6 +10,7 @@ import com.yahoo.tensor.evaluation.TypeContext;
 import java.util.Collections;
 import java.util.Deque;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * A node which flips the sign of the value produced from the nested expression
@@ -30,7 +31,7 @@ public class NegativeNode extends CompositeNode {
 
     @Override
     public List<ExpressionNode> children() {
-        return Collections.singletonList(value);
+        return List.of(value);
     }
 
     @Override
@@ -53,5 +54,8 @@ public class NegativeNode extends CompositeNode {
         if (children.size() != 1) throw new IllegalArgumentException("Expected 1 children but got " + children.size());
         return new NegativeNode(children.get(0));
     }
+
+    @Override
+    public int hashCode() { return Objects.hash("negative", value); }
 
 }
